--- a/en/b/bent.6793.wikitext
+++ b/en/b/bent.6793.wikitext
@@ -182,7 +182,7 @@ From {{inh|en|enm|bent}}, {{m|enm|benet}}, from {{inh|en|ang|*beonet-}} (atteste
 ==Dutch==
 
 ===Etymology===
-Created in analogy to {{cog|nl|ben||am}}. Modern Dutch ''bent'' has replaced the {{etyl|dum|-}} verb forms {{m|dum|bes}} and {{m|dum|best||(you) are (sg.)}}.<ref>A. van Loey, ''Schönfeld's Historische Grammatica van het Nederlands'', 8. druk 1970, {{ISBN|90-03-21170-1}}; §147a</ref>
+Created in analogy to {{cog|nl|ben||am}}. Modern Dutch ''bent'' has replaced the {{cog|dum|-}} verb forms {{m|dum|bes}} and {{m|dum|best||(you) are (sg.)}}.<ref>A. van Loey, ''Schönfeld's Historische Grammatica van het Nederlands'', 8. druk 1970, {{ISBN|90-03-21170-1}}; §147a</ref>
 
 ===Pronunciation===
 * {{IPA|lang=nl|/bɛnt/}}
