--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -20,11 +20,11 @@ From {{inh|en|enm|symple}}, {{m|enm|simple}}, from {{bor|en|fro|-}} and {{bor|en
 #*: There is no '''simple''' way to define precisely a complex arrangement of parts, however homely the object may appear to be.
 # Without [[ornamentation]]; [[plain]].
 # Free from [[duplicity]]; [[guileless]], [[innocent]], [[straightforward]].
-#* {{w|John Marston (poet)|John Marston}} (ca.1576-1634)
+#* {{rfdate|and other bibliographic particulars}} {{w|John Marston (poet)|John Marston}}
 #*: Full many fine men go upon my score, as '''simple''' as I stand here, and I trust them.
-#* {{w|Lord Byron}} (1788-1824)
+#* {{rfdate|and other bibliographic particulars}} {{w|Lord Byron}}
 #*: Must thou trust Tradition's '''simple''' tongue?
-#* {{w|Ralph Waldo Emerson}} (1803-1882)
+#* {{rfdate|and other bibliographic particulars}} {{w|Ralph Waldo Emerson}}
 #*: To be '''simple''' is to be great.
 # [[undistinguished|Undistinguished]] in social condition; of no special [[rank]].
 # {{lb|en|now|rare}} [[trivial|Trivial]]; [[insignificant]].
@@ -39,7 +39,7 @@ From {{inh|en|enm|symple}}, {{m|enm|simple}}, from {{bor|en|fro|-}} and {{bor|en
 ##: {{ux|en|a '''simple''' ascidian}}
 ## {{lb|en|mineralogy}} [[homogenous|Homogenous]].
 # {{lb|en|obsolete}} Mere; not other than; being only.
-#* {{w|William Shakespeare}} (1564-1616)
+#* {{rfdate|and other bibliographic particulars}} {{w|William Shakespeare}}
 #*: A medicine{{...}}whose '''simple''' touch / Is powerful to araise King Pepin.
 
 ====Synonyms====
@@ -219,12 +219,12 @@ From {{inh|en|enm|symple}}, {{m|enm|simple}}, from {{bor|en|fro|-}} and {{bor|en
 # {{lb|en|medicine}} A preparation made from one plant, as opposed to something made from more than one plant.
 #* {{RQ:Flr Mntgn Essays}}, II.37:
 #*: I know there are some '''simples''', which in operation are moistening and some drying.
-#* Sir W. Temple
+#* {{rfdate|and other bibliographic particulars}} Sir {{w|W. Temple}}
 #*: What virtue is in this remedy lies in the naked '''simple''' itself as it comes over from the Indies.
 # {{lb|en|obsolete}} A term for a physician, derived from the medicinal term above.
 # {{lb|en|logic}} A simple or atomic [[proposition]].
 # {{lb|en|obsolete}} Something not mixed or compounded.
-#* Shakespeare
+#* {{rfdate|and other bibliographic particulars}} {{w|Shakespeare}}
 #*: compounded of many '''simples'''
 # {{lb|en|weaving}} A [[drawloom]].
 # {{lb|en|weaving}} Part of the [[apparatus]] for raising the [[heddle]]s of a [[drawloom]].
