--- a/en/b/bid.6797.wikitext
+++ b/en/b/bid.6797.wikitext
@@ -15,7 +15,7 @@ From {{der|en|enm|bidden}}, from the {{der|en|ang|-}} verb {{m|ang|biddan||ask, 
 {{en-verb|bids|bidding|bid|past2=bade|past3=bad|bid|past_ptc2=bidden}}
 
 # {{lb|en|transitive}} To issue a [[command]]; to [[tell]].
-#: ''He '''bade''' me to come in.''
+#: ''He '''bade''' me come in.''
 # {{lb|en|transitive}} To [[invite]]; to [[summon]].
 #: ''She was '''bidden''' to the wedding.''
 # {{lb|en|transitive}} To [[utter]] a [[greeting]] or [[salutation]].
