--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -558,16 +558,31 @@ From {{inh|ga|sga|millid|t=spoils, ruins, destroys}}
 ----
 
 ==Manx==
+===Pronunciation===
+* {{IPA|/mɪl/|lang=gv}}
 
-===Etymology===
+===Etymology 1===
+From {{inh|gv|sga|millid|t=spoils, ruins, destroys}}. Cognate with {{cog|ga|mill}} and {{cog|gd|mill}}.
+
+====Verb====
+{{gv-verb|past=vill|futind=millee|vn=milley|pp=millit}}
+# [[destroy]], [[ruin]]
+# [[spoil]], [[tarnish]]
+# {{qualifier|as vision}} [[blur]]
+# [[disfigure]]
+# [[corrupt]]
+# [[mess]], [[tumble]], [[rustle]]
+#* {{ux|gv|Ny '''mill''' m'olt.|inline=1|Don't tumble my hair.}}
+
+===Etymology 2===
 From {{inh|gv|sga|mil}}, from {{inh|gv|cel-pro|*meli}}, from {{inh|gv|ine-pro|*mélid}}. Cognate with {{cog|ga|mil}}, {{cog|gd|mil}}, {{cog|la|mel}}, {{cog|grc|μέλι}}. Akin to {{m|gv|millish}} and {{m|gv|blass}}.
 
-===Noun===
+====Noun====
 {{gv-noun|m|millyn|molley}}
 
 # [[honey]]
 
-===Mutation===
+====Mutation====
 {{gv-mut-cons|m|ill}}
 
 ===References===
