/* Noun */ <systemic circulation#50230829>

--- a/en/s/systemic circulation.856353.wikitext
+++ b/en/s/systemic circulation.856353.wikitext
@@ -1,34 +1,7 @@
 ==English==
 [[File:Circulatory system SMIL.svg|thumbnail|Heart and circulatory system:<br>'''systemic circulation''' on the right side; [[pulmonary circulation]] on the left side.]]
 
-===Noun===
-{{en-noun|~}}
-
-# {{lb|en|anatomy}} The part of blood [[circulation]] which carries oxygenated blood away from the heart, to the body, and returns deoxygenated blood back to the heart.
-
-====Related terms====
-* [[pulmonary circulation]]
-* [[arterial circulation]]
-* [[venous circulation]]
-* [[coronary circulation]]
-* [[collateral circulation]]
-
-====Translations====
-{{trans-top|part of blood circulation}}
-* Afrikaans: {{t|af|liggaamsomloop}}, {{t|af|groot bloedsomloop}}, {{t|af|sistemiese sirkulasie}}
-* Azerbaijani: {{t|az|böyük qan dövranı}}
-* Danish: {{t|da|det systemiske kredsløb|n}}, {{t|da|kropskredsløbet|n}}
-* Dutch: {{t|nl|grote bloedsomloop|m}}
-* Finnish: {{t|fi|suuri verenkierto}}
-* German: {{t|de|großer Blutkreislauf|m}}, {{t|de|systemischer Kreislauf|m}}, {{t|de|Körperkreislauf|m}}
-{{trans-mid}}
-* Icelandic: {{t|is|líkamsblóðrás|f}}
-* Italian: {{t|it|grande circolazione|f}}, {{t|it|circolazione sistemica|f}}
-* Norwegian:
-*: Bokmål: {{t|nb|store kretsløp|n}}
-* Swedish: {{t|sv|systemkretsloppet|n}}, {{t|sv|stora kretsloppet|n}}
-* Turkish: {{t+|tr|büyük kan dolaşımı}}
-{{trans-bottom}}
+subscribe for the Epcot gamer
 
 ===See also===
 * [[circulatory system]]
