/* Adjective */ Counterpart syn list to that of the inflected counterpart, [[optimal#English|maximal]]. <maximum#50234414>

--- a/en/m/maximum.34063.wikitext
+++ b/en/m/maximum.34063.wikitext
@@ -97,6 +97,9 @@ Via {{etyl|fr|en}} from {{etyl|la|en}} ''[[#Latin|maximum]]''.
 # To the highest degree.
 #: ''Use the proper dose for the '''maximum''' effect.''
 
+====Synonyms====
+* {{l|en|maximal}}
+
 ====Translations====
 {{trans-top|highest degree}}
 * Catalan: {{t|ca|màxim}}
