--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -42,6 +42,8 @@ From 16th-century criminal slang, likely from {{m|en|abet}} or {{der|en|ang|bæt
 * Italian: {{t+|it|scommessa|f}}
 {{trans-mid}}
 * Khmer: {{t+|km|ទូ}}
+* Kurdish:
+*: Central Kurdish: {{t+|ckb|مەرج}}
 * Latvian: {{t+|lv|likme|f}}, {{t|lv|derības|f-p}}
 * Maltese: {{t|mt|mħatra}}
 * Norman: {{t|nrf|gageaille|f}}
