t+nn:[[ting]] ([[WT:EDIT|Assisted]]) <thing#50242990>

--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -178,6 +178,7 @@ From {{inh|en|enm|thing}}, from {{inh|en|ang|þing}}, from {{inh|en|gem-pro|*þi
 * Mwani: {{t|wmw|kinu}}
 * Nepali: {{t-needed|ne}}
 * Norwegian: {{t+|no|ting|m}}, {{t|no|dings|m}}, {{t+|no|greie|f}}
+*: Nynorsk: {{t|nn|ting|m}}
 * Old Church Slavonic:
 *: Cyrillic: {{t|cu|вещь|f}}
 * Old English: {{t|ang|þing|n}}
