--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -237,6 +237,7 @@ From {{etyl|enm|en}} {{m|enm|rabet}}, from {{etyl|frm|en}} dialect (compare {{et
 * Finnish: {{t|fi|kaniturkis}}, {{t+|fi|kani}}
 * Greek: {{t+|el|κόνικλος|m}}
 * Italian: {{t+|it|lapin|m}}
+* Korean: {{t+|ko|털|tr=teol}}
 * Scottish Gaelic: {{t|gd|coineanach|m}}, {{t|gd|rabaid|m}}
 {{trans-mid}}
 * Serbo-Croatian:
