/* Adjective */ "bound to " goes here? <bound#50252187>

--- a/en/b/bound.6799.wikitext
+++ b/en/b/bound.6799.wikitext
@@ -282,7 +282,7 @@ Alteration of {{m|en|boun}}, with '''-d''' partly for [[euphonic]] effect and pa
 # Ready to start or go (to); moving in the direction (of).
 #: ''Which way are you '''bound'''?
 #: ''Is that message '''bound''' for me?
-
+#: ''You are '''bound''' to fail.
 =====Derived terms=====
 {{rel-top|terms derived from the adjective ''bound'' ("moving in the direction of")}}
 * {{l|en|-bound}}
