--- a/en/b/bound.6799.wikitext
+++ b/en/b/bound.6799.wikitext
@@ -32,7 +32,7 @@ See {{m|en|bind}}.
 |chapter=5|url=http://openlibrary.org/works/OL8479084W
 |passage=Then I had a good think on the subject of the hocussing of Cigarette, and I was reluctantly '''bound''' to admit that once again the man in the corner had found the only possible solution to the mystery.}}
 #: {{ux|en|You are not legally '''bound''' to reply.}}
-# {{lb|en|with infinitive}} Very [[likely]] (to).
+# {{lb|en|with infinitive}} Very [[likely]] (to), [[certain]] to
 #* {{quote-book|year=1913|author={{w|Joseph C. Lincoln}}|chapter=5
 |title=[http://openlibrary.org/works/OL5535161W Mr. Pratt's Patients]
 |passage=When you're well enough off so's you don't have to fret about anything but your heft or your diseases you begin to get queer, I suppose. And the queerer the cure for those ailings the bigger the attraction. A place like the Right Livers' Rest was '''bound''' to draw freaks, same as molasses draws flies.}}
