--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -352,6 +352,7 @@ From {{etyl|enm|en}} {{m|enm|then|then(ne)}}, {{m|enm|than|than(ne)}}, from {{et
 
 ====Translations====
 {{trans-top|that time}}
+* Finnish: {{t|fi|[[sitä]]}} {{qualifier|used in partitive only}}
 * Georgian: {{t-needed|ka}}
 * Portuguese: {{t+|pt|então}}
 * Spanish: {{t+|es|entonces}}
