--- a/en/d/dud.26266.wikitext
+++ b/en/d/dud.26266.wikitext
@@ -111,6 +111,7 @@ Borrowed from {{bor|sh|ota|طوت|tr=tut, dut}}, from {{bor|sh|fa|توت|tr=tut}
 * {{l|sh|mȗrva}}
 
 [[Category:sh:Fruits]]
+[[Category:sh:Mulberry family plants]]
 
 ----
 
