t+gl:[[aproveitar]] ([[WT:EDIT|Assisted]]) <seize#50265911>

--- a/en/s/seize.26061.wikitext
+++ b/en/s/seize.26061.wikitext
@@ -101,6 +101,7 @@ Earlier {{m|en|seise}}, from {{etyl|enm|en}} {{m|enm|seisen}}, {{m|enm|sesen}}, 
 * Finnish: {{t+|fi|tarttua}} {{t+|fi|tilaisuus|alt=tilaisuuteen}}
 * French: {{t+|fr|saisir}}
 {{trans-mid}}
+* Galician: {{t+|gl|aproveitar}}
 * Italian: {{t+|it|approfittare}}
 * Latin: {{t|la|carpo}}
 * Norwegian: {{t|no|gripe}}
