t+it:[[ligure]] ([[WT:EDIT|Assisted]]) <Ligurian#50265924>

--- a/en/l/Ligurian.741748.wikitext
+++ b/en/l/Ligurian.741748.wikitext
@@ -57,6 +57,7 @@
 * French: {{t+|fr|ligurien|m}}
 * Galician: {{t|gl|lígur|m}}
 {{trans-mid}}
+* Italian: {{t+|it|ligure|m}}
 * Ligurian: {{t-needed|lij}}
 * Portuguese: {{t|pt|lígure|m}}, {{t|pt|ligúrio|m}}
 * Spanish: {{t+|es|ligur}}
