/* Translations */ that's ‘erm’ as in the vocal filler; inserting two better translations: ‘yes’ and ‘jippie’ <yeah#50265934>

--- a/en/y/yeah.4305.wikitext
+++ b/en/y/yeah.4305.wikitext
@@ -75,7 +75,7 @@ Shortened colloquial form of {{m|en|yes}}.
 
 ====Translations====
 {{trans-top|expressing joy}}
-* Dutch: {{t+|nl|euh}}
+* Dutch: {{t+|nl|yes}}, {{t+|nl|jippie}}
 * Finnish: {{t+|fi|jee}}, {{t+|fi|joo}}
 * French: {{t+|fr|ouais}}
 * Italian: {{t+|it|sì}}, {{t+|it|vai}}, {{t+|it|evvai}}, {{t|it|evviva}}
