/* Adjective */ extra sub-sense <simple#50270212>

--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -35,6 +35,7 @@ From {{inh|en|enm|symple}}, {{m|enm|simple}}, from {{bor|en|fro|-}} and {{bor|en
 ## {{lb|en|chemistry}} Consisting of one [[single]] substance; [[uncompounded]].
 ## {{lb|en|mathematics}} Of a group: having no [[normal]] [[subgroup]].
 ## {{lb|en|botany}} Not [[compound]], but possibly [[lobed]].
+## {{q|of a steam engine}} Not a [[compound]] engine, where [[steam]] is used more than once in [[high-pressure]] and [[low-pressure]] [[cylinder]]s.
 ## {{lb|en|zoology}} Consisting of a single individual or [[zooid]]; not [[compound]].
 ##: {{ux|en|a '''simple''' ascidian}}
 ## {{lb|en|mineralogy}} [[homogenous|Homogenous]].
