--- a/en/d/division.26256.wikitext
+++ b/en/d/division.26256.wikitext
@@ -24,6 +24,8 @@ From {{inh|en|enm|divisioun}}, from {{der|en|fro|division}}, from {{der|en|la|di
 # {{lb|en|taxonomy}} A [[rank]] below [[kingdom]] and above [[class]], particularly used of [[plant|plants]] or [[fungus|fungi]], also (particularly of [[animal]]s) called a [[phylum]]; a [[taxon]] at that rank.
 #: {{ux|en|Magnolias belong to the '''division''' Magnoliophyta.}}
 # A disagreement; a difference of viewpoint between two sides of an argument.
+# {{lb|en|government}} A method by which a legislature is separated into groups in order to take a better estimate of vote than a [[voice vote]].
+#: {{ux|en|The House of Commons has voted to approve the third reading of the bill without a '''division'''. The bill will now progress to the House of Lords.}}
 # {{lb|en|music}} A florid instrumental variation of a melody in the 17th and 18th centuries, originally conceived as the dividing of each of a succession of long notes into several short ones.
 # {{lb|en|music}} A set of pipes in a [[pipe organ]] which are independently controlled and supplied.
 # {{lb|en|legal}} A concept whereby a common group of debtors are only responsible for their proportionate sum of the total debt.
