--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -35,7 +35,7 @@ From {{inh|en|enm|symple}}, {{m|enm|simple}}, from {{bor|en|fro|-}} and {{bor|en
 ## {{lb|en|chemistry}} Consisting of one [[single]] substance; [[uncompounded]].
 ## {{lb|en|mathematics}} Of a group: having no [[normal]] [[subgroup]].
 ## {{lb|en|botany}} Not [[compound]], but possibly [[lobed]].
-## {{q|of a steam engine}} Not a [[compound]] engine, where [[steam]] is used more than once in [[high-pressure]] and [[low-pressure]] [[cylinder]]s.
+## {{q|of a steam engine}} Using [[steam]] only once in its [[cylinders]], in contrast to a [[compound]] engine, where steam is used more than once in [[high-pressure]] and [[low-pressure]] cylinders.
 ##* '''1959''', ''Steam's Finest Hour'', edited by David P. Morgan, Kalmbach Publishing Co., page 6:
 ##*: {{quote|en|Chesapeake & Ohio turned to '''simple''' articulateds, for instance, simply because its Alleghany tunnels would not accommodate the low-pressure forward cylinders of larger compounds.}}
 ## {{lb|en|zoology}} Consisting of a single individual or [[zooid]]; not [[compound]].
