--- a/en/n/no kidding.742290.wikitext
+++ b/en/n/no kidding.742290.wikitext
@@ -30,7 +30,7 @@
 * Armenian: {{t-needed|hy}}
 * Chinese:
 *: Mandarin: {{t-needed|cmn}}
-* Finnish: {{t-needed|fi}}
+* Finnish: {{t|fi|ihanko totta}}, {{t|fi|ei kai}}
 * French: {{t-needed|fr}}
 {{trans-mid}}
 * German: {{t-needed|de}}
