--- a/en/o/owre.720028.wikitext
+++ b/en/o/owre.720028.wikitext
@@ -6,7 +6,7 @@
 # {{obsolete form of|hour|lang=en}}
 # {{obsolete form of|oar|lang=en}}
 # {{obsolete form of|ore|lang=en}}
-# {{lb|en|obsolete}} [[aurochs]].
+# {{lb|en|obsolete}} The [[aurochs]].
 #: {{rfquotek|Edmund Spenser|lang=en}}
 
 ===Anagrams===
