--- a/en/f/fraction.34055.wikitext
+++ b/en/f/fraction.34055.wikitext
@@ -81,7 +81,7 @@ From {{inh|en|enm|fraccioun||a breaking}}, from {{bor|en|xno|-}}, from {{der|en|
 * Irish: {{t|ga|codán|m}}
 * Italian: {{t+|it|frazione|f}}
 {{trans-mid}}
-* Japanese: {{t|ja|断片|tr=dan-pen}}
+* Japanese: {{t|ja|断片|tr=だんぺん, danpen}}
 * Latvian: {{t|lv|daļskaitlis|m}}
 * Macedonian: {{t|mk|дел|m|tr=del}}, {{t|mk|делче|n|tr=délče}}
 * Maori: {{t|mi|hautau}}, {{t|mi|hautanga}}
@@ -91,7 +91,8 @@ From {{inh|en|enm|fraccioun||a breaking}}, from {{bor|en|xno|-}}, from {{der|en|
 * Romanian: {{t+|ro|fracție}}
 * Russian: {{t+|ru|часть|f}}
 * Scottish Gaelic: {{t|gd|bìdeag|f}}, {{t|gd|criomag|f}}, {{t|gd|mìr|m}}
-* Serbo-Croatian: {{t+|sh|dȉo|m}}, {{t+|sh|òdsječak|m}}
+* Serbo-Croatian:
+*: Roman: {{t+|sh|dȉo|m}}, {{t+|sh|òdsječak|m}}
 * Spanish: {{t+|es|fracción}}, {{g|f}}
 * Swedish: {{t+|sv|bråkdel|c}}
 * Tagalog: {{t|tl|bahagimbilang}}
@@ -120,7 +121,7 @@ From {{inh|en|enm|fraccioun||a breaking}}, from {{bor|en|xno|-}}, from {{der|en|
 * Hungarian: {{t+|hu|tört}}, {{t+|hu|törtszám}}
 * Irish: {{t|ga|codán|m}}
 * Italian: {{t+|it|frazione|f}}
-* Japanese: {{t+|ja|分数|tr=bunsū}}
+* Japanese: {{t+|ja|分数|tr=ぶんすう, bunsū}}
 * Korean: {{t+|ko|분수}}
 {{trans-mid}}
 * Kyrgyz: {{t+|ky|бөлчөк}}
@@ -128,13 +129,15 @@ From {{inh|en|enm|fraccioun||a breaking}}, from {{bor|en|xno|-}}, from {{der|en|
 * Mongolian: {{t|mn|бутархай тоо}}
 * Norwegian: {{t+|no|brøk|m}}
 *: Bokmål: {{t+|nb|brøk|m}}
-* Persian: {{t+|fa|کسر}}
+* Persian: {{t+|fa|کسر|tr=kasr}}
 * Polish: {{t+|pl|ułamek|m}}
 * Portuguese: {{qualifier|Brazil}} [[fração]] {{g|f}}, {{qualifier|Portugal}} [[fracção]] {{g|f}}
 * Romanian: {{t+|ro|fracție|f}}
 * Russian: {{t+|ru|дробь|f}}
 * Scottish Gaelic: {{t|gd|bloigh|f}}
-* Serbo-Croatian: {{t+|sh|rázlomak|m}}, {{t|sh|ра́зломак|m}}
+* Serbo-Croatian:
+*: Cyrillic: {{t|sh|ра́зломак|m}}
+*: Roman: {{t+|sh|rázlomak|m}}
 * Slovak: {{t|sk|zlomok|m}}
 * Slovene: {{t+|sl|ulomek|m}}
 * Spanish: {{t+|es|fracción}}, {{g|f}}, {{t+|es|quebrado|m}}
@@ -148,7 +151,7 @@ From {{inh|en|enm|fraccioun||a breaking}}, from {{bor|en|xno|-}}, from {{der|en|
 {{trans-bottom}}
 
 {{trans-top|chemistry: component separated by fractionation}}
-* Bulgarian: {{t+|bg|фракция|f|sc=Cyrl}}
+* Bulgarian: {{t+|bg|фра́кция|f}}
 * Finnish: {{t+|fi|jae}}
 * Hebrew: {{t|he|מִקְטָע|m|tr=mikta}}
 {{trans-mid}}
