--- a/en/f/fraction.34055.wikitext
+++ b/en/f/fraction.34055.wikitext
@@ -128,8 +128,9 @@ From {{inh|en|enm|fraccioun||a breaking}}, from {{bor|en|xno|-}}, from {{der|en|
 * Japanese: {{t+|ja|分数|tr=ぶんすう, bunsū}}
 * Kazakh: {{t+|kk|бөлшек}}
 * Korean: {{t+|ko|분수}}
-{{trans-mid}}
 * Kyrgyz: {{t+|ky|бөлчөк}}
+{{trans-mid}}
+* Lao: {{t|lo|ເສດສ່ວນ}}
 * Latvian: {{t+|lv|daļskaitlis|m}}
 * Lithuanian: {{t|lt|trupmena|f}}
 * Macedonian: {{t|mk|дропка|f}}
