t+ru:[[частица]] t-balance ([[WT:EDIT|Assisted]]) <fraction#50289568>

--- a/en/f/fraction.34055.wikitext
+++ b/en/f/fraction.34055.wikitext
@@ -80,8 +80,8 @@ From {{inh|en|enm|fraccioun||a breaking}}, from {{bor|en|xno|-}}, from {{der|en|
 * German: {{t+|de|Bruchteil|m}}
 * Irish: {{t|ga|codán|m}}
 * Italian: {{t+|it|frazione|f}}
-{{trans-mid}}
 * Japanese: {{t|ja|断片|tr=だんぺん, danpen}}
+{{trans-mid}}
 * Latvian: {{t|lv|daļskaitlis|m}}
 * Macedonian: {{t|mk|дел|m}}, {{t|mk|делче|n}}
 * Maori: {{t|mi|hautau}}, {{t|mi|hautanga}}
@@ -89,7 +89,7 @@ From {{inh|en|enm|fraccioun||a breaking}}, from {{bor|en|xno|-}}, from {{der|en|
 * Polish: {{t+|pl|ułamek|m}}, {{t+|pl|cząstka|f}}
 * Portuguese: {{qualifier|Brazil}} [[fração]] {{g|f}}, {{qualifier|Portugal}} [[fracção]] {{g|f}}
 * Romanian: {{t+|ro|fracție}}
-* Russian: {{t+|ru|часть|f}}
+* Russian: {{t+|ru|часть|f}}, {{t+|ru|части́ца|f}}
 * Scottish Gaelic: {{t|gd|bìdeag|f}}, {{t|gd|criomag|f}}, {{t|gd|mìr|m}}
 * Serbo-Croatian:
 *: Roman: {{t+|sh|dȉo|m}}, {{t+|sh|òdsječak|m}}
