--- a/en/d/doncella.803303.wikitext
+++ b/en/d/doncella.803303.wikitext
@@ -26,7 +26,7 @@ From a {{inh|es|VL.|*domnicella}} (compare Old Occitan {{m|pro|donçela}}, Portu
 ===Noun===
 {{es-noun|f}}
 
-# [[maid]], [[damsel]] {{gloss|girl or an unmarried young woman}}
+# [[maid]], [[maiden]], [[damsel]] {{gloss|girl or an unmarried young woman}}
 # [[abigail]], [[lady's maid]] {{gloss|female servant employed by an upper-class woman to attend to her personal needs}}
 
 ====Related terms====
