/* Derived terms */ <consumption#50294919>

--- a/en/c/consumption.34058.wikitext
+++ b/en/c/consumption.34058.wikitext
@@ -20,8 +20,8 @@ From {{etyl|fro|en}} {{m|fro|consumpcion}}, from {{etyl|la|en}} {{m|la|consumpti
 # {{senseid|en|TB}}{{lb|en|pathology|dated}} [[pulmonary tuberculosis|Pulmonary tuberculosis]] and other diseases that cause wasting away, lung infection, etc.
 
 ====Derived terms====
-* {{l|en|autoconsumption}}, {{l|en|self-consumption}}.
-* {{l|en|conspicuous consumption}}.
+* {{l|en|autoconsumption}}, {{l|en|self-consumption}}
+* {{l|en|conspicuous consumption}}
 
 ====Related terms====
 * {{l|en|consumer}}
