--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -1,4 +1,5 @@
-{{also|Island|Ísland|Īsland|Island'}}
+{{also|Island|Ísland|Īsland|Island'}} It is spelt Island
+
 ==English==
 {{wikipedia|lang=en}}
 [[Image:Island_near_Fiji.jpg|thumb|right|An island.]]
