--- a/en/m/milkweed.720309.wikitext
+++ b/en/m/milkweed.720309.wikitext
@@ -17,7 +17,7 @@
 * {{l|en|silkweed}}
 
 ====Hyponyms====
-* {{sense|plants in genus ''Asclepias''}} {{vern|common milkweed}} ({{taxlink|Asclepias syriaca|species|noshow=1|ver=161014}}), {{vern|clasping milkweed}} ({{taxlink|Asclepias amplexicaulis|species|noshow=1|ver=161014}}), [[butterfly milkweed]] (''[[Asclepias tuberosa]]''), {{vern|fourleaf milkweed}} ({{taxlink|Asclepias quadrifolia|species|noshow=1|ver=161014}}), {{vern|green comet milkweed}} ({{taxlink|Asclepias viridiflora|species|noshow=1|ver=161014}}), {{vern|poke milkweed}} ({{taxlink|Asclepias exaltata|species|noshow=1|ver=161014}}), [[purple milkweed]] ({{taxlink|Asclepias purpurascens|species|noshow=1|ver=161014}}), {{vern|red milkweed}} ({{taxlink|Asclepias rubra|species|noshow=1|ver=161014}}), {{vern|redring milkweed}} ({{taxlink|Asclepias variegata|species|noshow=1|ver=161014}}), [[swamp milkweed]] (''[[Asclepias incarnata]]''), {{vern|whorled milkweed}} ({{taxlink|Asclepias verticillata|species|noshow=1|ver=161014}})
+* {{sense|plants in genus ''Asclepias''}} {{vern|common milkweed}} ({{taxlink|Asclepias syriaca|species|noshow=1|ver=161014}}), {{vern|clasping milkweed}} ({{taxlink|Asclepias amplexicaulis|species|noshow=1|ver=161014}}), [[butterfly milkweed]] (''[[Asclepias tuberosa]]''), {{vern|fourleaf milkweed}} ({{taxlink|Asclepias quadrifolia|species|noshow=1|ver=161014}}), {{vern|green comet milkweed}} (''[[Asclepias viridiflora]]''), {{vern|poke milkweed}} ({{taxlink|Asclepias exaltata|species|noshow=1|ver=161014}}), [[purple milkweed]] ({{taxlink|Asclepias purpurascens|species|noshow=1|ver=161014}}), {{vern|red milkweed}} ({{taxlink|Asclepias rubra|species|noshow=1|ver=161014}}), {{vern|redring milkweed}} ({{taxlink|Asclepias variegata|species|noshow=1|ver=161014}}), [[swamp milkweed]] (''[[Asclepias incarnata]]''), {{vern|whorled milkweed}} ({{taxlink|Asclepias verticillata|species|noshow=1|ver=161014}})
 
 ====Translations====
 {{trans-top|a plant}}
