t+km:[[ទម្ងន់]] t+lo:[[ນ້ຳຫນັກ]] t-balance t+bn:[[ওজন]] t+am:[[ክብደት]] t+sq:[[peshë]] t+af:[[gewig]] ([[WT:EDIT|Assisted]]) <weight#50310636>

--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -93,6 +93,9 @@ Cognate with {{cog|sco|wecht}}, {{m|sco|weicht||weight}}, {{cog|stq|Wächte||sca
 
 ====Translations====
 {{trans-top|force due to gravity}}
+* Afrikaans: {{t|af|gewig}}
+* Albanian: {{t+|sq|peshë|f}}
+* Amharic: {{t|am|ክብደት}}
 * Arabic: {{t+|ar|وَزْن}}
 * Armenian: {{t+|hy|կշիռ}}, {{t+|hy|քաշ}}, {{t+|hy|ծանրություն}}
 * Assamese: {{t|as|ওজন}}
@@ -100,6 +103,7 @@ Cognate with {{cog|sco|wecht}}, {{m|sco|weicht||weight}}, {{cog|stq|Wächte||sca
 * Azerbaijani: {{t+|az|çəki}}, {{t+|az|ağırlıq}}
 * Basque: {{t|eu|pisu}}
 * Belarusian: {{t|be|ва́га|f|sc=Cyrl}}
+* Bengali: {{t+|bn|ওজন}}
 * Bulgarian: {{t+|bg|тегло́|n|sc=Cyrl}}
 * Burmese: {{t+|my|အလေး|sc=Mymr}}
 * Catalan: {{l|ca|pes}}
@@ -131,12 +135,12 @@ Cognate with {{cog|sco|wecht}}, {{m|sco|weicht||weight}}, {{cog|stq|Wächte||sca
 * Italian: {{t+|it|peso|m}}
 * Japanese: {{qualifier|objects}} {{t|ja|重さ|tr=omosa}}, {{qualifier|general}} {{t+|ja|重量|tr=jūryō}}, {{qualifier|living things}} {{t+|ja|体重|tr=taijū}}
 * Kazakh: {{t|kk|салмақ|sc=Cyrl}}
-* Khmer: {{t-needed|km}}
+* Khmer: {{t+|km|ទម្ងន់}}
+{{trans-mid}}
 * Korean: {{t+|ko|중량}} ({{t+|ko|重量}}), {{t+|ko|무게}}, {{t+|ko|체중}} {{qualifier|body weight}}
 * Kyrgyz: {{t+|ky|салмак|sc=Cyrl}}
 * Ladin: {{t|lld|peis|m}}
-{{trans-mid}}
-* Lao: {{t|lo|ນ້ຳໜັກ}}
+* Lao: {{t|lo|ນ້ຳໜັກ}}, {{t|lo|ນ້ຳຫນັກ}}
 * Latvian: {{t|lv|svars|m}}
 * Lithuanian: {{t+|lt|svoris|m}}
 * Luxembourgish: {{t|lb|Gewiicht|n}}
