--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -120,7 +120,7 @@ Cognate with {{cog|sco|wecht}}, {{m|sco|weicht||weight}}, {{cog|stq|Wächte||sca
 * French: {{t+|fr|poids}}
 * Friulian: {{t|fur|pês|m}}
 * Galician: {{t+|gl|peso|m}}
-* Georgian: {{t-needed|ka}}
+* Georgian: {{t|ka|წონა}}
 * German: {{t+|de|Gewicht|n}}
 * Greek: {{t+|el|βάρος|n}}
 *: Ancient: {{t|grc|βάρος|n}}
