--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -136,8 +136,8 @@ Cognate with {{cog|sco|wecht}}, {{m|sco|weicht||weight}}, {{cog|stq|Wächte||sca
 * Japanese: {{qualifier|objects}} {{t|ja|重さ|tr=omosa}}, {{qualifier|general}} {{t+|ja|重量|tr=jūryō}}, {{qualifier|living things}} {{t+|ja|体重|tr=taijū}}
 * Kazakh: {{t|kk|салмақ|sc=Cyrl}}
 * Khmer: {{t+|km|ទម្ងន់}}
-{{trans-mid}}
 * Korean: {{t+|ko|중량}} ({{t+|ko|重量}}), {{t+|ko|무게}}, {{t+|ko|체중}} {{qualifier|body weight}}
+{{trans-mid}}
 * Kyrgyz: {{t+|ky|салмак|sc=Cyrl}}
 * Ladin: {{t|lld|peis|m}}
 * Lao: {{t|lo|ນ້ຳໜັກ}}, {{t|lo|ນ້ຳຫນັກ}}
@@ -164,6 +164,7 @@ Cognate with {{cog|sco|wecht}}, {{m|sco|weicht||weight}}, {{cog|stq|Wächte||sca
 *: Cyrillic: {{t|sh|тежина|f}}
 *: Roman: {{t+|sh|težina|f}}
 * Sicilian: {{t+|scn|pisu|m}}
+* Sinhalese: {{t|si|බර}}
 * Slovak: {{t|sk|váha|f}}
 * Slovene: {{t+|sl|teža|f}}
 * Spanish: {{t+|es|peso|m}}
