--- a/en/p/pledge.7357.wikitext
+++ b/en/p/pledge.7357.wikitext
@@ -75,7 +75,7 @@ From {{etyl|enm|en}} {{m|enm|plege}}, from {{etyl|xno|en}} {{m|fro|plege}}, from
 * Polish: {{t|pl|złożyć zastaw}}
 * Russian: {{t|ru|[[отдава́ть]] в [[зало́г]]|impf}}, {{t|ru|[[отда́ть]] в [[зало́г]]|pf}}, {{t+|ru|закла́дывать|impf}}, {{t+|ru|заложи́ть|pf}}
 * Slovene: {{t|sl|zastaviti}}
-* Spanish: {{t+|es|hipotecar}}, {{t+|es|empeñar}}
+* Spanish: {{t+|es|hipotecar}}, {{t+|es|empeñar}}, {{t+|es|pignorar}}
 * Thai: {{t+|th|จำนำ}}
 {{trans-bottom}}
 
