--- a/en/c/consumption.34058.wikitext
+++ b/en/c/consumption.34058.wikitext
@@ -9,7 +9,7 @@ From {{etyl|fro|en}} {{m|fro|consumpcion}}, from {{etyl|la|en}} {{m|la|consumpti
 * {{audio|en-us-consumption.ogg|Audio (US)|lang=en}}
 
 ===Noun===
-{{en-noun|-}}
+{{en-noun|-|s}}
 
 # The act of [[consume|consuming]], i.e., burning something.
 #: ''The fire's '''consumption''' of the forest caused ecological changes.''
