--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -74,8 +74,9 @@ The slang sense of "police officer" is attested since at least 1785.<ref>'''2003
 {{der4|title=terms derived from the noun "pig"|blind pig|bush pig|dish pig|eat like a pig|flying pig|guinea pig|happy as a pig in shit|if pigs had wings|in a pig's eye|minipig|pig bed|pigface|piggery|piggish|piggy|piggy bank|piggyback|pigheaded|pig in a blanket|pig in a poke|pig iron|pig it|pig Latin|pig lead|piglet|pig-out|pig out|pigpen|pigskin|pig-sticking|pigsty|pigtail|pigweed|potbellied pig|suckling pig|sweat like a pig|when pigs fly|whistle pig|year of the pig|lang=en}}
 
 =====Descendants=====
-* {{desc|abe|piks|bor=1}} {{q|from "pigs"}}
-* {{desc|pqm|piks|bor=1}} {{q|from "pigs"}}
+* {{desc|tcs|pig}}
+* {{desc|bor=1|abe|piks}} {{q|from "pigs"}}
+* {{desc|bor=1|pqm|piks}} {{q|from "pigs"}}
 
 =====Translations=====
 {{trans-top|mammal of genus ''Sus''}}
