--- a/en/l/laverock.720420.wikitext
+++ b/en/l/laverock.720420.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology===
-From {{etyl|enm|en}} {{m|enm|laveroc}}, {{m|enm|laverke}}, from Old English {{m|ang|lāferce}}, variant of older {{m|ang|lāwerce}}, {{m|ang|laewerce|lǣwerce}}. More at {{l|en|lark}}.
+From {{inh|en|enm|laveroc}}, {{m|enm|laverke}}, from {{inh|en|ang|lāferce}}, variant of older {{m|ang|lāwerce}}, {{m|ang|laewerce|lǣwerce}}. More at {{l|en|lark}}.
 
 ===Noun===
 {{en-noun}}
@@ -23,9 +23,12 @@ From {{etyl|enm|en}} {{m|enm|laveroc}}, {{m|enm|laverke}}, from Old English {{m|
 
 ==Scots==
 
+===Etymology===
+From {{inh|sco|enm|laveroc}}, {{m|enm|laverke}}, from {{inh|sco|ang|lāferce}}, variant of older {{m|ang|lāwerce}}, {{m|ang|laewerce|lǣwerce}}.
+
 ===Noun===
 {{sco-noun}}
 
-# A [[lark]].
+# [[lark]]
 
 [[Category:sco:Birds]]
