--- a/en/b/badger.8231.wikitext
+++ b/en/b/badger.8231.wikitext
@@ -66,7 +66,7 @@ From {{inh|en|enm|bageard||marked by a badge}}, from {{m|enm|bage|t=badge}}, ref
 * Galician: {{t+|gl|teixugo|m}}, {{t+|gl|porco teixo|m}}
 * Georgian: {{t|ka|მაჩვი}}
 * German: {{t+|de|Dachs|m}}
-* Gothic: {{t|got|𐌸𐌰𐌷𐍃𐌿𐍃|m}}
+* Gothic: {{t|got|*𐌸𐌰𐌷𐍃𐌿𐍃|m}}
 * Greek: {{t+|el|ασβός|m}}
 * Hebrew: {{t+|he|גִּירִית|f|tr=girit}}
 * Hindi: {{t+|hi|बिज्जू|m}}
