--- a/en/b/byke.720312.wikitext
+++ b/en/b/byke.720312.wikitext
@@ -13,7 +13,7 @@
 * {{l|sco|bike}}, {{l|sco|byk}}, {{l|sco|byik}}, {{l|sco|bink}}
 
 ===Etymology===
-Etymology unknown. Cognate with Northern {{etyl|enm|sco}} {{m|enm|bike}}; ''cf.'' {{etyl|en|sco}} {{m|en|bike}}.
+Etymology unknown. Cognate with Northern {{cog|enm|bike}}; ''cf.'' {{cog|en|bike}}.
 
 ===Pronunciation===
 * {{IPA|lang=sco|/ˈbəik/}}
