t+sh:[[oklada]] ([[WT:EDIT|Assisted]]) <bet#50332725>

--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -133,6 +133,7 @@ From 16th-century criminal slang, likely from {{m|en|abet}} or {{der|en|ang|bæt
 * Polish: {{t+|pl|postawić}}, {{t+|pl|zakładać się}}
 * Portuguese: {{t+|pt|apostar}}
 * Russian: {{t+|ru|би́ться об закла́д}}, {{t+|ru|держа́ть пари́}}
+* Serbo-Croatian: {{t+|sh|oklada}}
 * Slovak: {{t|sk|staviť}}, {{t|sk|vsadiť}}, {{t|sk|stávkovať}}
 * Slovene: {{t|sl|staviti}}
 * Spanish: {{t+|es|apostar}}
