--- a/en/r/rot.26064.wikitext
+++ b/en/r/rot.26064.wikitext
@@ -64,7 +64,7 @@ From {{inh|en|enm|rotten}}, {{m|enm|roten}}, from {{inh|en|ang|rotian||to rot, b
 * Georgian: {{t|ka|ლპობა}}, {{t|ka|დალპობა}}, {{t|ka|ჩალპობა}}, {{t|ka|ხრწნა}}
 * German: {{t+|de|verrotten}}, {{t+|de|verderben}}, {{t+|de|faulen}}, {{t+|de|verfaulen}}
 * Greek: {{t+|el|σαπίζω}}
-*: Ancient Greek: {{t|grc|[[σήπω|σήπομαι]]}}
+*: Ancient: {{t|grc|[[σήπω|σήπομαι]]}}
 * Hungarian: {{t+|hu|rohad}}, {{t+|hu|rothad}}
 * Italian: {{t+|it|marcire}}, {{t|it|putrefarsi}}
 * Japanese: {{t+|ja|腐る|tr=くさる, kusaru|sc=Jpan}}
