/* Synonyms */ expand <attend#50335696>

--- a/en/a/attend.7359.wikitext
+++ b/en/a/attend.7359.wikitext
@@ -47,7 +47,10 @@ From {{inh|en|enm|attenden}}, {{m|enm|atenden}}, from {{der|en|fro|atendre||to a
 #*: Three days I promised to '''attend''' my doom.
 
 =====Synonyms=====
-* {{sense|listen to}} {{l|en|behear}}
+* {{sense|listen to}} {{l|en|behear}}, {{l|en|heed}}, {{l|en|mark}}, {{l|en|notice}}
+* {{sense|listen}} {{l|en|notice}}, {{l|en|pay attention}}, {{l|en|take heed}}; See also [[Thesaurus:listen]] or [[Thesaurus:pay attention]]
+* {{sense|wait upon as a servant}} {{l|en|bestand}}, {{l|en|serve}}; See also [[Thesaurus:serve]]
+* {{sense|wait for}} See also [[Thesaurus:wait for]]
 
 =====Related terms=====
 {{rel-top|to be at an event}}
