--- a/en/o/Oaxaca.775466.wikitext
+++ b/en/o/Oaxaca.775466.wikitext
@@ -2,7 +2,7 @@
 [[File:Mexico map, MX-OAX.svg|thumb|Map of [[Mexico]] highlighting Oaxaca]]
 
 ===Etymology===
-Borrowed from {{bor|en|nah|Huaxyacac|Huāxyacac|place of guaje trees}}.
+Borrowed from {{bor|en|es|Oaxaca}}, from {{der|en|nci|Huāxacac}}, from {{m|nci|Huāxacatzin|t=name of a hill}}, from {{m|nci|huāxin|t=a type of tree}} + {{m|nci|yacatl|t=nose}} + {{m|nci|-tzin|t=honorific suffix}}.
 
 ===Pronunciation===
 * {{a|US}} {{IPA|/wɑːˈhɑː.kɑː/|/wəˈhɑː.kɑː/|lang=en}}
@@ -11,10 +11,33 @@ Borrowed from {{bor|en|nah|Huaxyacac|Huāxyacac|place of guaje trees}}.
 ===Proper noun===
 {{en-proper noun}}
 
+# A [[city]] in [[Mexico]].
+# A [[municipality]] whose [[municipal seat]] is the city of the same name.
 # One of the 31 [[states]] of [[Mexico]], formally the Free and Sovereign State of Oaxaca, located in the southern part of the country, west of the Isthmus of Tehuantepec.
-# The largest [[city]] in the state of Oaxaca, for which the state is named.
+
+====Synonyms====
+* {{sense|city}} {{l|en|Oaxaca City}}
 
 ====Translations====
+{{trans-top|city}}
+* Amuzgo:
+*: San Pedro Amuzgos: {{t|azg|Nontsco}}
+* Mixtec:
+*: Chayuco: {{t|mih|Nunduva}}
+*: San Juan Colorado: {{t|mjc|Nunduva}}
+*: San Miguel El Grande: {{t|mig|nunduá}}
+*: Yosondúa: {{t|mpm|Nunduva}}
+{{trans-mid}}
+* Nahuatl:
+*: Classical: {{t|nci|Huāxacac}}
+* Spanish: {{t|es|Oaxaca de Juárez|f}}, {{t+|es|Oaxaca|f}}
+{{trans-bottom}}
+
+{{trans-top|municipality}}
+* Spanish: {{t|es|Oaxaca de Juárez|f}}, {{t+|es|Oaxaca|f}}
+{{trans-mid}}
+{{trans-bottom}}
+
 {{trans-top|state of Mexico}}
 * Chinese:
 *: Mandarin: {{t|cmn|瓦哈卡州}}
@@ -22,24 +45,19 @@ Borrowed from {{bor|en|nah|Huaxyacac|Huāxyacac|place of guaje trees}}.
 * Spanish: {{t+|es|Oaxaca|f}}
 {{trans-bottom}}
 
-{{trans-top|city}}
-* Spanish: {{t|es|Oaxaca de Juárez|f}}, {{t+|es|Oaxaca|f}}
-{{trans-mid}}
-{{trans-bottom}}
-
 ===Noun===
 {{en-noun|~}}
 
 # A white, semihard [[cheese]] from Mexico.
 
-[[Category:en:States of Mexico]]
+{{topics|en|Cities in Mexico|States of Mexico}}
 
 ----
 
 ==Spanish==
 
 ===Etymology===
-{{etyl|nah|es}} {{m|nah|Huaxyacac|Huāxyacac|place of guaje trees}}.
+Borrowed from {{der|es|nci|Huāxacac}}, from {{m|nci|Huāxacatzin|t=name of a hill}}, from {{m|nci|huāxin|t=a type of tree}} + {{m|nci|yacatl|t=nose}} + {{m|nci|-tzin|t=honorific suffix}}.
 
 ===Pronunciation===
 * {{rhymes|a|lang=es}}
@@ -47,7 +65,9 @@ Borrowed from {{bor|en|nah|Huaxyacac|Huāxyacac|place of guaje trees}}.
 ===Proper noun===
 {{es-proper noun|f}}
 
-# {{place|es|state|c/Mexico}}
+# Oaxaca {{gloss|city}}
+# Oaxaca {{gloss|municipality}}
+# Oaxaca {{gloss|state}}
 
 ====Synonyms====
 * {{l|es|OA}} {{qualifier|abbreviation}}
