--- a/en/m/macrocephalus.801848.wikitext
+++ b/en/m/macrocephalus.801848.wikitext
@@ -17,7 +17,7 @@
 ==Latin==
 
 ===Etymology===
-New Latin; from {{etyl|grc|la}}.
+New Latin; from {{der|la|grc}}.
 
 ===Pronunciation===
 * {{la-IPA|macrocephalus}}
