--- a/en/l/leather.4309.wikitext
+++ b/en/l/leather.4309.wikitext
@@ -137,7 +137,7 @@ From {{inh|en|enm|lether}}, from {{inh|en|ang|leþer||leather}}, from {{inh|en|g
 {{trans-bottom}}
 
 {{trans-top|colloquial: cricket ball or football}}
-* Finnish: {{t+|fi|nahkakuula}} (''football'')
+* Finnish: {{t+|fi|nahkakuula}} {{q|football}}
 {{trans-mid}}
 * Hungarian: {{t+|hu|bőr}}
 {{trans-bottom}}
