/* Noun */ # {{lb|en|Scotland|legal}} The half-year's [[stipend]] payable for the vacant half-year after the death of a parish minister, to which his family or nearest of kin have right under an act of 1672. <annate#50356644>

--- a/en/a/annate.745877.wikitext
+++ b/en/a/annate.745877.wikitext
@@ -9,6 +9,7 @@ See {{m|en|ann}}.
 # The first year's [[profit]]s of a Catholic [[benefice]], as traditionally paid directly to the [[Pope]].
 #* '''2009''', Hilary Mantel, ''Wolf Hall'', Fourth Estate 2010, p. 342:
 #*: When he brings into the Commons a bill to suspend the payment of '''annates''' to Rome, he suggests a division of the House.
+# {{lb|en|Scotland|legal}} The half-year's [[stipend]] payable for the vacant half-year after the death of a parish minister, to which his family or nearest of kin have right under an act of 1672.
 
 ----
 
