t+qu:[[achuqalla]] ([[WT:EDIT|Assisted]]) <weasel#50359954>

--- a/en/w/weasel.8232.wikitext
+++ b/en/w/weasel.8232.wikitext
@@ -124,6 +124,7 @@ The verb comes from the supposed [[cunningness]] of the weasel.
 * Maori: {{t|mi|wītara}}, {{t|mi|wīhara}}, {{t|mi|tori uaroa}}
 * Navajo: {{t|nv|dlǫ́ʼii}}
 * Portuguese: {{t+|pt|doninha|f}}
+* Quechua: {{t+|qu|achuqalla}}
 * Scottish Gaelic: {{t|gd|neas|f}}
 * Volapük: {{qualifier|♂♀}} {{t|vo|visaf}}
 * West Frisian: {{t|fy|marter|c}}
