--- a/en/b/bind.6798.wikitext
+++ b/en/b/bind.6798.wikitext
@@ -126,7 +126,7 @@ From {{inh|en|enm|binden}}, from {{inh|en|ang|bindan}}, from {{inh|en|gem-pro|*b
 * Old Saxon: {{t|osx|bindan}}
 * Plautdietsch: {{t|pdt|binjen}}
 * Portuguese: {{t+|pt|amarrar}}
-* Quechua: {{t|qu|watai}}
+* Quechua: {{t|qu|arwiy}}, {{t|qu|watay}}
 * Russian: {{t+|ru|свя́зывать|impf}}, {{t+|ru|свя́зать|pf}}
 * Saterland Frisian: {{t|stq|biende}}
 * Spanish: {{t+|es|atar}}
