--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -17,6 +17,9 @@ From 16th-century criminal slang, likely from {{m|en|abet}} or {{der|en|ang|bæt
 # A degree of [[certainty]].
 #: ''It’s a safe '''bet''' that it will rain tomorrow.''
 #: ''It’s an even '''bet''' that Jim will come top of the maths test tomorrow.''
+# {{slang}} An expression of doubt.
+#*: "I'm gonna make this paper in the trash can from here, watch me." 
+#*: "That's a fat '''bet.'''
 
 =====Translations=====
 {{trans-top|a wager}}
