--- a/en/q/qua.4315.wikitext
+++ b/en/q/qua.4315.wikitext
@@ -13,7 +13,7 @@ From {{etyl|la|en}} {{m|la|qua||in the capacity of}}.
 ====Preposition====
 {{en-prep}}
 
-# in the [[capacity]] of
+# [[as]]; in the [[capacity]] of
 #* '''1954''': [[w:Gilbert Ryle|Gilbert Ryle]], ''Dilemmas: The Tarner Lectures, 1953'', <span style="font-variant:small-caps">dilemma vii: Perception</span>, page 99 (The Syndics of the Cambridge University Press)
 #*: As anatomy, physiology and, later, psychology have developed into more or less well-organized sciences, they have necessarily and rightly come to incorporate the study of, among other things, the structures, mechanisms, and functionings of animal and human bodies '''''qua''''' percipient.
 #* '''1962''': [[w:Norman Malcolm|Norman Malcolm]]; ''Dreaming''; chapter nine: “Judgments in Sleep”, page 39<sup>{1}</sup>; chapter twelve: “The Concept of Dreaming”, page 68<sup>{2}</sup> (1977 paperback reprint; Routledge & Kegan Paul; ISBN 0‒7100‒3836‒4 (c), 0‒7100‒8434‒X (p))
