/* English */ <bearded mussel#50376014>

--- a/en/b/bearded mussel.741498.wikitext
+++ b/en/b/bearded mussel.741498.wikitext
@@ -13,7 +13,7 @@
 # a coastal mussel of Britain, {{taxlink|Modiolus barbatus|species|noshow=1}}.
 
 ====Synonyms====
-* {{sense|Modiolus barbatus}} {{vern|horse mussel}}, {{vern|horse-bearded mussel}}
+* {{sense|Modiolus barbatus}} [[horse mussel]], {{vern|horse-bearded mussel}}
 
 ===See also===
 * {{l|en|bearded clam}}
