/* Synonyms */ <bearded mussel#50376029>

--- a/en/b/bearded mussel.741498.wikitext
+++ b/en/b/bearded mussel.741498.wikitext
@@ -10,7 +10,7 @@
 # A coastal mussel of Britain, {{taxlink|Modiolus barbatus|species|noshow=1}}.
 
 ====Synonyms====
-* {{sense|Modiolus barbatus}} [[horse mussel]], {{vern|horse-bearded mussel}}
+* {{sense|Modiolus barbatus}} [[horse mussel]], {{vern|bearded horse mussel}}
 
 ===See also===
 * {{l|en|bearded clam}}
