--- a/en/b/bearded mussel.741498.wikitext
+++ b/en/b/bearded mussel.741498.wikitext
@@ -1,6 +1,6 @@
 {{also|bearded-mussel}}
 ==English==
-
+{{rfi|en}}
 ===Etymology===
 [[bearded]] + [[mussel]]; both this and the specific epithet ''[[barbatus]]'' refer to the long bristles which protrude from the [[periostracum]], appearing to coat the shell in hair.
 
