t+ru:[[несостоятельность]] ([[WT:EDIT|Assisted]]) <unsoundness#50379830>

--- a/en/u/unsoundness.742255.wikitext
+++ b/en/u/unsoundness.742255.wikitext
@@ -21,4 +21,5 @@
 {{trans-top|the state of being unsound}}
 * Irish: {{t|ga|fabht|m}}, {{t|ga|fabhtacht|f}}
 {{trans-mid}}
+* Russian: {{t+|ru|несостоя́тельность|f}}
 {{trans-bottom}}
