--- a/en/m/monarchism.720278.wikitext
+++ b/en/m/monarchism.720278.wikitext
@@ -16,6 +16,7 @@ Borrowed from {{bor|en|fr|monarchisme}}
 ====Translations====
 {{trans-top|advocacy of the monarchistic political system}}
 * Czech: {{t|cs|monarchismus|m}}
+* Estonian: {{t|et|monarhism}}
 * Finnish: {{t|fi|monarkismi}}
 * German: {{t|de|Monarchismus|m}}
 * Italian: {{t+|it|monarchismo|m}}
