/* Translations */ Added Ancient Greek translation of this word. <division#50404845>

--- a/en/d/division.26256.wikitext
+++ b/en/d/division.26256.wikitext
@@ -164,6 +164,7 @@ From {{inh|en|enm|divisioun}}, from {{der|en|fro|division}}, from {{der|en|la|di
 * Georgian: {{t|ka|გაყოფა}}
 * German: {{t+|de|Division|f}}
 * Greek: {{t+|el|διαίρεση|f}}
+*: Ancient: {{t|grc|διαίρεσις|f}}
 * Hebrew: {{t+|he|חילוק|m|tr=ḥilúq|sc=Hebr}}
 * Hungarian: {{t+|hu|osztás}}
 * Icelandic: {{t+|is|deiling|f}}
