/* Translations */ Added Ancient Greek translation of this word. <multiplication#50404864>

--- a/en/m/multiplication.26254.wikitext
+++ b/en/m/multiplication.26254.wikitext
@@ -56,6 +56,7 @@ When applied to whole numbers, multiplication can be considered as repeated addi
 * Georgian: {{t|ka|გამრავლება}}
 * German: {{t+|de|Multiplikation|f}}
 * Greek: {{t+|el|πολλαπλασιασμός|m}}
+*: Ancient: {{t|grc|πολλαπλασιασμός|m}}
 * Hungarian: {{t+|hu|szorzás}}
 * Icelandic: {{t+|is|margföldun|f}}
 * Italian: {{t+|it|moltiplicazione|f}}
@@ -96,6 +97,7 @@ When applied to whole numbers, multiplication can be considered as repeated addi
 * French: {{t+|fr|multiplication|f}}
 * Georgian: {{t|ka|გამრავლება}}
 * Greek: {{t+|el|πολλαπλασιασμός|m}}
+*: Ancient: {{t|grc|πολλαπλασιασμός|m}}
 * Hungarian: {{t+|hu|szorzás}}
 * Japanese: {{t-needed|ja}}
 {{trans-mid}}
