--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -184,7 +184,7 @@ From {{inh|en|enm|thing}}, from {{inh|en|ang|þing}}, from {{inh|en|gem-pro|*þi
 * Old English: {{t|ang|þing|n}}
 * Persian: {{t+|fa|چیز|tr=čiz|sc=fa-Arab}}
 * Polish: {{t+|pl|rzecz|f}}, {{t+|pl|coś|n}}
-* Portuguese: {{t+|pt|coisa|f}}
+* Portuguese: {{t+|pt|coisa|f}}, {{t+|pt|cousa|m}}
 * Romanian: {{t+|ro|lucru|n}}, {{t+|ro|chestie|f}}, {{t+|ro|obiect|n}}
 * Russian: {{t+|ru|вещь|f}}, {{t+|ru|не́что|n}}, {{t+|ru|предме́т|m}}
 * Rwanda-Rundi: {{t|rw|ikintu|c7|c8}}
