t+sq:[[{{t-needed}}]] t+hy:[[{{t-needed}}]] t+eu:[[{{t-needed}}]] t+eo:[[{{t-needed}}]] t+hi:[[{{t-needed}}]] t+hu:[[{{t-needed}}]] t+my:[[{{t-needed}}]] t+ko:[[{{t-needed}}]] t+fa:[[{{t-needed}}]] t-balance ([[WT:EDIT|Assisted]]) <gamble#50415391>

--- a/en/g/gamble.34097.wikitext
+++ b/en/g/gamble.34097.wikitext
@@ -100,24 +100,33 @@ From earlier {{m|en|gamel}}, from {{inh|en|enm|*gamlen}}, {{m|enm|*gamelen}}, va
 {{trans-bottom}}
 
 {{trans-top|to play risky games for monetary gain}}
+* Albanian: {{t-needed|sq}}
 * Arabic: {{t|ar|قَامَرَ}}
+* Armenian: {{t-needed|hy}}
+* Basque: {{t-needed|eu}}
 * Bulgarian: {{t|bg|играя комар|sc=Cyrl}}
+* Burmese: {{t-needed|my}}
 * Chinese:
 *: Cantonese: {{t|yue|賭錢|sc=Hani}}, {{t|yue|赌钱|tr=dou2 cin4-2|sc=Hani}}
 *: Mandarin: {{t+|cmn|賭博|sc=Hani}}, {{t+|cmn|赌博|tr=dǔbó|sc=Hani}}, {{t+|cmn|賭錢|sc=Hani}}, {{t+|cmn|赌钱|tr=dǔqián|sc=Hani}}
 * Dutch: {{t+|nl|gokken}}, [[kansspel]]en bedrijven
+* Esperanto: {{t-needed|eo}}
 * Finnish: {{t|fi|uhkapelata}}
 * German: {{t+|de|wetten}}, {{t+|de|spielen}}, {{qualifier|slang}} {{t+|de|zocken}}
 * Hebrew: {{t+|he|הימר|tr=himér}}
+* Hindi: {{t-needed|hi}}
+{{trans-mid}}
+* Hungarian: {{t-needed|hu}}
 * Ido: {{t|io|ludriskar}}
 * Indonesian: {{t+|id|berjudi}}
 * Italian: {{t+|it|scommettere}}
-{{trans-mid}}
 * Japanese: {{t+|ja|賭ける|tr=[[かける]], kakeru|sc=Jpan}}
 * Khmer: {{t-needed|km}}
+* Korean: {{t-needed|ko}}
 * Macedonian: {{t|mk|се коцка|tr=se kócka}}
 * Malay: {{t|ms|judi}}
 * Maori: {{t|mi|purei moni}}, {{t|mi|petipeti}}
+* Persian: {{t-needed|fa}}
 * Portuguese: {{t+|pt|apostar}}
 * Russian: {{t|ru|игра́ть в аза́ртные и́гры}}
 * Serbo-Croatian: {{t+|sh|kockati|alt=kȍckati se}}
