t+sq:[[{{t-needed}}]] t+hi:[[{{t-needed}}]] t+hu:[[{{t-needed}}]] t+is:[[{{t-needed}}]] t+ms:[[{{t-needed}}]] t+mn:[[{{t-needed}}]] t+ne:[[{{t-needed}}]] t-balance t+vi:[[{{t-needed}}]] t+cy:[[{{t-needed}}]] ([[WT:EDIT|Assisted]]) <bet#50415457>

--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -103,6 +103,7 @@ From 16th-century criminal slang, likely from {{m|en|abet}} or {{der|en|ang|bæt
 
 =====Translations=====
 {{trans-top|To stake or pledge upon the outcome of an event}}
+* Albanian: {{t-needed|sq}}
 * Arabic: {{t|ar|رَاهَنَ}}
 * Basque: {{t|eu|apustu egin}}
 * Breton: {{t|br|klaoustreañ}}
@@ -121,13 +122,19 @@ From 16th-century criminal slang, likely from {{m|en|abet}} or {{der|en|ang|bæt
 * German: {{t+|de|wetten}}
 * Greek: {{t+|el|ποντάρω}}, {{t+|el|στοιχηματίζω}}
 * Hebrew: {{t|he|התערב|tr=hit'arév}}
-{{trans-mid}}
+* Hindi: {{t-needed|hi}}
+* Hungarian: {{t-needed|hu}}
+* Icelandic: {{t-needed|is}}
 * Indonesian: {{t+|id|taruh}}
+{{trans-mid}}
 * Italian: {{t+|it|scommettere}}
 * Japanese: {{t+|ja|賭ける|tr=かける, kakeru}}
 * Khmer: {{t+|km|ភ្នាល់|tr=pnoal|sc=Khmr}}
 * Latvian: {{t|lv|derēt}}, {{t|lv|saderēt}}
+* Malay: {{t-needed|ms}}
 * Maori: {{t|mi|petipeti}}
+* Mongolian: {{t-needed|mn}}
+* Nepali: {{t-needed|ne}}
 * Norman: {{t|nrf|gagi}}, {{t|nrf|pathier}}
 * Norwegian: {{t|no|vedde}}
 * Polish: {{t+|pl|postawić}}, {{t+|pl|zakładać się}}
@@ -140,6 +147,8 @@ From 16th-century criminal slang, likely from {{m|en|abet}} or {{der|en|ang|bæt
 * Swedish: {{t|sv|slå vad}}
 * Thai: {{t+|th|พนัน}}, {{t+|th|เดิมพัน}}
 * Turkish: {{t-needed|tr}}
+* Vietnamese: {{t-needed|vi}}
+* Welsh: {{t-needed|cy}}
 {{trans-bottom}}
 
 {{trans-top|To be sure of something}}
