--- a/en/s/squirrel.8243.wikitext
+++ b/en/s/squirrel.8243.wikitext
@@ -139,6 +139,7 @@ From {{etyl|enm|en}} {{m|enm|squirel}}, {{m|enm|squyrelle}}, from {{etyl|xno|en}
 * Nivkh: {{t|niv|лаӄр̌|tr=laqrš|sc=Cyrl}}
 * Norman: {{qualifier|Jersey}} {{t|nrf|êtchutheu|m}}, {{qualifier|continental Norman}} {{t|nrf|jaqùet|m}}
 * North Frisian: {{t|frr|kaateeker}} {{qualifier|Föhr}}
+* Northern Sami: {{t|se|oarri|alt=oarˈri}}
 * Northern Sotho: {{t|nso|sehlora}}
 * Norwegian:
 *: Bokmål: {{t+|nb|ekorn|m|n}}
