--- a/en/s/squirrel.8243.wikitext
+++ b/en/s/squirrel.8243.wikitext
@@ -3,7 +3,7 @@
 {{wikipedia}}
 
 ===Etymology===
-From {{etyl|enm|en}} {{m|enm|squirel}}, {{m|enm|squyrelle}}, from {{etyl|xno|en}} {{m|fro|esquirel}} and {{etyl|fro|en}} {{m|fro|escurel}} (whence {{cog|fr|écureuil}}), from {{etyl|VL.|en}} {{m|la|*scūriolus}}, diminutive of {{m|la|*scūrius}}, variant of {{etyl|la|en}} {{m|la|sciurus}}, from {{etyl|grc|en}} {{m|grc|σκίουρος}}. Displaced native {{cog|enm|aquerne}}, from {{cog|ang|ācweorna}}.
+From {{inh|en|enm|squirel}}, {{m|enm|squyrelle}}, from {{etyl|xno|en}} {{m|fro|esquirel}} and {{der|en|fro|escurel}} (whence {{cog|fr|écureuil}}), from {{der|en|VL.|*scūriolus}}, diminutive of {{m|la|*scūrius}}, variant of {{der|en|la|sciurus}}, from {{der|en|grc|σκίουρος}}. Displaced native Middle English {{m|enm|aquerne}}, from Old English {{m|ang|ācweorna}}.
 
 ===Pronunciation===
 * {{a|RP|Aus|UK}} {{IPA|/ˈskwɪɹl̩/|/ˈskwɪɹəl/|lang=en}}
