--- a/en/s/sir.26262.wikitext
+++ b/en/s/sir.26262.wikitext
@@ -28,7 +28,7 @@ From {{inh|en|enm|sir}}, borrowed from {{bor|en|fro|sire||master, sir, lord}}, f
 ## to a [[teacher]].
 ##: {{ux|en|Here's my report, '''sir'''.}}
 # A [[respectful]] [[term]] of [[address]] to any [[male]], ''[[especially]]'' if his [[name]] or [[proper]] [[title]] is [[unknown]].
-#: ''Excuse me, '''sir''', do you know the wifi password here?''
+#: ''Excuse me, '''sir''', do you know the way to the art museum?''
 # {{lb|en|colloquial}} {{non-gloss definition|Used as an intensifier after}} yes ''or'' no.
 #: {{ux|en|Sir, yes '''sir'''.}}
 
