--- a/en/b/badger.8231.wikitext
+++ b/en/b/badger.8231.wikitext
@@ -88,7 +88,7 @@ From {{inh|en|enm|bageard||marked by a badge}}, from {{m|enm|bage|t=badge}}, ref
 * Kyrgyz: {{t|ky|кашкулак}}
 * Ladin: {{t|lld|tas|?}}
 * Lakota: {{t|lkt|ȟoká}}
-* Latin: {{t|la|mēles|f}}
+* Latin: {{t|la|mēlēs|f}}
 * Latvian: {{t+|lv|āpsis|m}}
 * Lithuanian: {{t+|lt|barsukas|m}}, {{t|lt|opšrus|?}}
 * Low German:
