--- a/en/t/theory.7354.wikitext
+++ b/en/t/theory.7354.wikitext
@@ -129,6 +129,7 @@ In scientific discourse, the sense “unproven conjecture” is discouraged (wit
 * Estonian: {{t+|et|teooria}}
 * Finnish: {{t+|fi|teoria}}
 * French: {{t+|fr|théorie|f}}
+* Galician: {{t|gl|teoría|f}}
 * Georgian: {{t|ka|თეორია}}
 * German: {{t+|de|Theorie|f}}
 * Greek: {{t+|el|θεωρία|f}}
