--- a/en/t/theory.7354.wikitext
+++ b/en/t/theory.7354.wikitext
@@ -194,6 +194,7 @@ In scientific discourse, the sense “unproven conjecture” is discouraged (wit
 * Dutch: {{t+|nl|theorie}}
 * Finnish: {{t+|fi|teoria}}
 * French: {{t+|fr|théorie|f}}
+* Galician: {{t|gl|teoría|f}}
 * German: {{t+|de|Theorie|f}}
 * Greek: {{t+|el|θεωρία|f}}
 * Indonesian: {{t+|id|teori}}
