--- a/en/d/dame.26261.wikitext
+++ b/en/d/dame.26261.wikitext
@@ -220,6 +220,7 @@ From {{der|nn|la|domina}}, via {{bor|nn|fro|dame}} and late {{inh|nn|non|damma}}
 * {{l|nn|dametoalett}}
 * {{l|nn|dameundertøy}}
 * {{l|nn|hoffdame}}
+* {{l|nn|kassadame}}
 
 ===References===
 * {{R:The Nynorsk Dictionary}}
