--- a/en/t/talk down.775561.wikitext
+++ b/en/t/talk down.775561.wikitext
@@ -16,6 +16,7 @@
 #*: '''Talk him down''', the rule book went. Calm him, get him secured. Easier said than done. Crane had '''talked down''' a would-be jumper standing on a support cable of the George Washington Bridge.
 #* [https://books.google.com/books?id=P0A3SykTK6UC&pg=PA212&dq=talked+him+down&hl=en&sa=X&ei=MQ6eVaDdEsXAtQW8lLngBQ&ved=0CD8Q6AEwBjgK ''Shelby: A Great Love''] by CJ Raines
 #*: And that guy that '''talked him down''' told us what happen{{SIC}}. It's kidnapping, attempted assault.
+# {{lb|en|transitive}} To [[overcome]] by [[spoken]] [[argument]].
 
 ====Translations====
 {{trans-top|negotiate}}
