--- a/en/i/indention.742103.wikitext
+++ b/en/i/indention.742103.wikitext
@@ -1,9 +1,7 @@
 ==English==
 
 ===Noun===
-{{en-noun}}
+{{en-noun|~}}
 
 # The act of [[indent]]ing a line of [[text]] by including [[blank]] [[space]] at the beginning
-
-====See also====
-* {{l|en|indentation}}
+#: {{synonyms|en|indentation}}
