/* Translations */ Added Latin translation of this word. <bid#50450824>

--- a/en/b/bid.6797.wikitext
+++ b/en/b/bid.6797.wikitext
@@ -129,6 +129,7 @@ From {{der|en|enm|beden}}, from the {{der|en|ang|-}} verb {{m|ang|bēodan||offer
 * French: {{t+|fr|soumissionner}} (for contract)
 {{trans-mid}}
 * German: {{t+|de|bieten}}
+* Latin: {{t|la|liceor}}
 * Occitan: {{t+|oc|ofrir}}, {{t+|oc|propausar}}
 * Spanish: {{t+|es|ofrecer}}, {{t+|es|ofertar}}
 * Swedish: {{t+|sv|bjuda}}
