--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -90,7 +90,7 @@ From {{inh|en|enm|again}}, {{m|enm|ayain}}, {{m|enm|ayen}}, {{m|enm|anȝen}}, fr
 * Dutch: {{t+|nl|weer}}, {{t+|nl|weder}}
 * German: {{t+|de|wieder}}, {{t+|de|zurück}}
 * Low German:
-*: German Low German: {{t+|nds-de|wedder}}
+*: German Low German: {{t+|nds-de|wedder}}; {{t|nds-de|wier}} {{q|Paderbornisch}}
 {{trans-mid}}
 * Portuguese: {{t|pt|de volta}}
 * Russian: {{t+|ru|наза́д}}, {{t+|ru|обра́тно}}
@@ -163,7 +163,7 @@ From {{inh|en|enm|again}}, {{m|enm|ayain}}, {{m|enm|ayen}}, {{m|enm|anȝen}}, fr
 * Latvian: {{t|lv|atkal}}
 * Lithuanian: {{t+|lt|vėl}}
 * Low German:
-*: German Low German: {{t|nds-de|nochmaal}}, {{t+|nds-de|wedder}}, {{t|nds-de|noch eenmaal}}
+*: German Low German: {{t|nds-de|nochmaal}}, {{t+|nds-de|wedder}}, {{t|nds-de|noch eenmaal}}; {{t|nds-de|wier}} {{q|Paderbornisch}}
 * Macedonian: {{t|mk|пак}}, {{t|mk|повторно}}
 * Malay: {{t+|ms|lagi}}
 * Malayalam: {{t+|ml|വീണ്ടും}}
