--- a/en/w/whistler.7356.wikitext
+++ b/en/w/whistler.7356.wikitext
@@ -14,6 +14,7 @@ From {{inh|en|enm|whisteler}}, {{m|enm|whistlar}}, {{m|enm|whystelare}}, from {{
 # A [[whistling marmot]].
 # A [[goldeneye]].
 # An [[audio]]-[[frequency]] [[electromagnetic wave]] produced by [[atmospheric]] [[disturbance]]s such as [[lightning]].
+# {{lb|en|slang|obsolete}} The [[keeper]] of a [[whistling shop]], or [[shebeen]].
 
 ====Synonyms====
 * {{sense|whistling marmot}} {{l|en|hoary marmot}}
