--- a/en/p/pledge.7357.wikitext
+++ b/en/p/pledge.7357.wikitext
@@ -166,6 +166,11 @@ From {{etyl|enm|en}} {{m|enm|plege}}, from {{etyl|xno|en}} {{m|fro|plege}}, from
 * Spanish: {{t+|es|iniciado|m}}, {{t+|es|iniciada|f}}
 {{trans-bottom}}
 
+{{trans-top|security to guarantee the payment of a debt}}
+* Finnish: {{t|fi|vakuus}}
+{{trans-mid}}
+{{trans-bottom}}
+
 {{trans-top|drinking toast}}
 * Finnish: {{t|fi|maljapuhe}}
 {{trans-mid}}
