--- a/en/f/FM.26231.wikitext
+++ b/en/f/FM.26231.wikitext
@@ -19,6 +19,9 @@
 # {{lb|en|countable}} {{abbreviation of|lang=en|field marshal}}
 # {{lb|en|countable}} {{abbreviation of|lang=en|finance minister}}
 # {{lb|en|countable}} {{abbreviation of|lang=en|foreign minister}}
+===Interjection===
+{{en-interj}}
+# {{initialism of|[[fuck me|'''F''' '''M'''e]]|lang=en}}
 
 ===Anagrams===
 * {{anagrams|en|M-F|MF}}
