--- a/en/s/subtraction.26255.wikitext
+++ b/en/s/subtraction.26255.wikitext
@@ -46,6 +46,7 @@ Borrowed from {{bor|en|LL.|subtractio|subtractio, subtractionis}}.
 {{trans-mid}}
 * Italian: {{t+|it|sottrazione|f}}
 * Japanese: {{t+|ja|引き算|tr=ひきざん, hikizan|sc=Jpan}}, {{t|ja|減法|tr=げんぽう, genpō|sc=Jpan}}
+* Kannada: {{t+|kn|ವ್ಯವಕಲನ}}
 * Norwegian:
 *: Bokmål: {{t|nb|subtraksjon|m}}
 *: Nynorsk: {{t|nn|subtraksjon|m}}
