--- a/en/1/1 Samuel.801687.wikitext
+++ b/en/1/1 Samuel.801687.wikitext
@@ -23,6 +23,7 @@
 * Greek: {{t|el|Α' Σαμουήλ}}
 * Irish: {{t|ga|Céad Leabhar Shamúéil|m}}, {{t|ga|1 Samúéil|m}}
 * Japanese: {{t|ja|サムエル記上|tr=samueru kijō}}
+* Korean: {{t|ko|사무엘상|tr=samuel sang}}
 * Spanish: {{t|es|1 Samuel|m}}
 * Thai: {{t|th|๑ ซามูเอล}}
 {{trans-bottom}}
