--- a/en/2/2 Samuel.801688.wikitext
+++ b/en/2/2 Samuel.801688.wikitext
@@ -24,6 +24,7 @@
 * Greek: {{t|el|Β' Σαμουήλ}}
 * Irish: {{t|ga|Dara Leabhar Shamúéil|m}}, {{t|ga|2 Samúéil|m}}
 * Japanese: {{t|ja|サムエル記下|tr=samueru kige|sc=Jpan}}
+* Korean: {{t|ko|사무엘하|tr=samuel ha}}
 * Ngazidja Comorian: {{t|zdj|2 Samweli}}
 * Spanish: {{t|es|2 Samuel|m}}
 * Thai: {{t|th|๒ ซามูเอล}}
