--- a/en/c/count down.856261.wikitext
+++ b/en/c/count down.856261.wikitext
@@ -24,6 +24,7 @@
 {{trans-mid}}
 * French: {{t+|fr|décompter}}
 * German: {{t-needed|de}}
+* Polish: {{t|pl|odliczać|impf}}, {{t|pl|odliczyć|pf}}
 * Portuguese: {{t|pt|[[fazer]] ([[a]]) [[contagem regressiva]]}}
 * Spanish: {{t-needed|es}}
 {{trans-bottom}}
@@ -36,6 +37,7 @@
 {{trans-mid}}
 * French: {{t+|fr|décompter}}
 * German: {{t-needed|de}}
+* Polish: {{t|pl|odliczać}}
 * Portuguese: {{t|pt|contar os dias}}
 * Spanish: {{t-needed|es}}
 {{trans-bottom}}
