--- a/en/c/crook.34069.wikitext
+++ b/en/c/crook.34069.wikitext
@@ -115,6 +115,7 @@ From {{inh|en|enm|croke}}, {{m|enm|crok}}, from {{inh|en|ang|*crōc|t=hook, bend
 #*: For if a damsel's blind or lame, / Or nature's hand has '''crooked''' her frame, / Or if she's deaf or is wall-eyed; / Yet if her heart is well inclined, / Some tender lover she shall find / That panteth for a bride.
 #* '''1917''', [[w:Leo Tolstoy|Leo Tolstoy]], [[w:Constance Garnett|Constance Garnett]] (translator)'' [[s:Anna Karenina|Anna Karenina]]'', Part 4, Chapter 5,
 #*: “{{...}}In the following cases: physical defect in the married parties, desertion without communication for five years,” he said, '''crooking''' a short finger covered with hair{{...}}.
+# {{lb|en|intransitive}} To become bent or hooked.
 # To turn from the path of rectitude; to pervert; to misapply; to twist.
 #* '''1545''', {{w|Roger Ascham}}, ''Toxophilus'', edited by {{w|Edward Arber}}, Westminster: A. Constable & Co., 1895, pp. 57-8, [https://archive.org/details/RogerAschamToxophilus1545]
 #*: For the foundation of youth well sette (as Plato doth saye) the whole bodye of the commune wealth shall floryshe therafter. If the yonge tree growe croked, when it is oulde, a man shal rather breake it than streyght it. And I thinke there is no one thinge yat '''crokes''' youth more then suche vnlefull games.
