t+hu:[[szerencsejátékot játszik]] t-balance ([[WT:EDIT|Assisted]]) <gamble#50513655>

--- a/en/g/gamble.34097.wikitext
+++ b/en/g/gamble.34097.wikitext
@@ -114,9 +114,9 @@ From earlier {{m|en|gamel}}, from {{inh|en|enm|*gamlen}}, {{m|enm|*gamelen}}, va
 * Finnish: {{t|fi|uhkapelata}}
 * German: {{t+|de|wetten}}, {{t+|de|spielen}}, {{qualifier|slang}} {{t+|de|zocken}}
 * Hebrew: {{t+|he|הימר|tr=himér}}
-* Hindi: {{t-needed|hi}}
 {{trans-mid}}
-* Hungarian: {{t-needed|hu}}
+* Hindi: {{t-needed|hi}}
+* Hungarian: {{t|hu|szerencsejátékot játszik}}
 * Ido: {{t|io|ludriskar}}
 * Indonesian: {{t+|id|berjudi}}
 * Italian: {{t+|it|scommettere}}
