--- a/en/g/gamble.34097.wikitext
+++ b/en/g/gamble.34097.wikitext
@@ -139,6 +139,7 @@ From earlier {{m|en|gamel}}, from {{inh|en|enm|*gamlen}}, {{m|enm|*gamelen}}, va
 * Dutch: [[op het spel]] zetten, {{t+|nl|vergokken}}, {{t+|nl|wagen}}
 * Finnish: {{t+|fi|vaarantaa}}
 * German: aufs {{t+|de|Spiel|n}} {{t+|de|setzen}}
+* Hungarian: {{t+|hu|kockáztat}}, {{t|hu|kockára tesz}}
 * Interlingua: [[poner]] in [[risco]]
 * Italian: {{t+|it|rischiare}}
 {{trans-mid}}
