--- a/en/g/gamble.34097.wikitext
+++ b/en/g/gamble.34097.wikitext
@@ -32,7 +32,7 @@ From earlier {{m|en|gamel}}, from {{inh|en|enm|*gamlen}}, {{m|enm|*gamelen}}, va
 * French: {{t+|fr|pari|m}}, {{t+|fr|jeu de hasard|m}}
 * German: {{t+|de|Glücksspiel|n}}, {{t|de|Hazardspiel|n}}
 * Greek: {{t+|el|στοίχημα|n}}
-* Hungarian: {{t+|hu|szerencsejáték}}, {{t+|hu|hazárdjáték}}, {{t+|hu|lutri}}
+* Hungarian: {{t+|hu|szerencsejáték}}, {{t+|hu|hazárdjáték}}
 * Ido: {{t|io|ludrisko}}
 {{trans-mid}}
 * Italian: {{t+|it|scommessa|f}}
