--- a/en/b/biatch.741988.wikitext
+++ b/en/b/biatch.741988.wikitext
@@ -6,7 +6,7 @@
 ===Noun===
 {{en-noun|es}}
 
-# {{lb|en|pejorative|slang|[[gangsta]]|euphemism}} {{alternative form of|bitch|lang=en}} sometimes it's you
+# {{lb|en|pejorative|slang|[[gangsta]]|euphemism}} {{alternative form of|bitch|lang=en}}
 #* {{quote-text|year=2002|author=Natika Waldon|title=Urban Affairs|page=197|passage=“Fuck you, you son of a bitch!” Dana screamed, trying to cover herself. “Fuck your mamma, '''biatch'''!” he said as he kicked his door shut.}}
 #* {{quote-text|year=2004|author=Greg Fox|title=Coming Clean: The Best and Worst of Dailyconfession.Com|page=76|passage=Something similar happened with ATM machines giving away money in the UK and the people who took advantage are now in prison . . . it's a '''biatch''' I know, but honesty really is the best policy!}}
 #* {{quote-text|year=2005|author=Matt Stone|title=Go Backpacking!|page=106|passage=This trail isn't merely hell, it's a full blown '''biatch'''!}}
