--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -16,10 +16,12 @@ From {{inh|en|enm|at}}, from {{inh|en|ang|æt||at, near, by, toward}}, from {{in
 ====Preposition====
 {{en-prep}}
 
-# [[in|In]] or very [[near]] a particular [[place]].
-#: {{ux|en|'''at''' that precise position;&emsp; '''at''' Jim’s house}}
+# [[in|In]], [[near]], or in the general vicinity of a particular [[place]].
+#: {{ux|en|Caesar was '''at''' Rome;&emsp; '''at''' the corner of Fourth Street and Vine;&emsp; '''at''' Jim’s house}}
 #* {{RQ:Frgsn Zlnstn|IV}}
 #*: “My Continental prominence is improving,” I commented dryly. ¶ Von Lindowe cut at a furze bush with his silver-mounted rattan. ¶ “Quite so,” he said as dryly, his hand '''at''' his mustache. “I may say if your intentions were known your life would not be worth a curse.”
+#* '''1919''', Plutarch, [http://penelope.uchicago.edu/Thayer/E/Roman/Texts/Plutarch/Lives/Cicero*.html ''Parallel Lives'', "The Life of Cicero"], 43 (Bernadotte Perrin, trans.)
+#*: "Hirtius and Pansa, who were good men and admirers of Cicero, begged him not to desert them, and undertook to put down Antony if Cicero would remain '''at''' Rome."
 #* {{RQ:Schuster Hepaticae V|4}}
 #*: (''b'') sporophyte with foot reduced, the entire sporophyte enveloped by the calyptra, which is ± stipitate '''at''' the base.
 # {{qualifier|indicating time}} {{n-g|Indicating occurrence in an instant of time or a period of time relatively short in context or from the speaker's perspective.}}
