t+fr:[[misérables]] ([[WT:EDIT|Assisted]]) <misbegotten#50527669>

--- a/en/m/misbegotten.720286.wikitext
+++ b/en/m/misbegotten.720286.wikitext
@@ -20,6 +20,7 @@
 
 {{trans-top|people, considered as a class, born into infelicitous circumstances}}
 {{trans-mid}}
+* French: {{t+|fr|misérables|m-p|f-p}}
 {{trans-bottom}}
 
 ===Adjective===
