/* Translations */ Added Norwegian, unsure if it's the same in nynorsk as in bokmål <quack#50528203>

--- a/en/q/quack.4311.wikitext
+++ b/en/q/quack.4311.wikitext
@@ -38,6 +38,7 @@ From {{inh|en|enm|*quacken}}, {{m|enm|queken|t=to croak like a frog; make a nois
 * Macedonian: {{t|mk|квак|tr=kvák}}
 * Malay: {{t|ms|wak}}
 * Maori: {{t|mi|keakea}}, {{t|mi|kēkē}}
+* Norwegian: {{t+|no|kvakk}}
 * Polish: {{t+|pl|kwa}}
 * Portuguese: {{t|pt|quac|m}}
 * Romanian: {{t+|ro|mac}}, {{t|ro|mac-mac}}, {{t+|ro|măcăit|n}}, {{t+|ro|măcănit|n}}, {{t+|ro|măcăitură|f}}
