--- a/en/q/quack.4311.wikitext
+++ b/en/q/quack.4311.wikitext
@@ -82,6 +82,7 @@ From {{inh|en|enm|*quacken}}, {{m|enm|queken|t=to croak like a frog; make a nois
 * Italian: {{t-check|it|[[fare]] [[qua qua]]}} <!-- was "[[fare]] [[qua qua]]" - assumed sum-of-parts; if an idiom, remove the wikilinks to the individual words. see [[User:Kephir/gadgets/xte#Translation_fixing]] -->
 * Japanese: {{qualifier|duck}} {{t|ja|ガーガーと鳴く|tr=gā-gā to naku}}, {{qualifier|colloquial|human}} {{t|ja|ガヤガヤしゃべる|tr=gayagaya shaberu}}
 * Maori: {{t|mi|keakea}}, {{t|mi|kēkē}}
+* Norwegian: {{t+|no|kvekke}}
 * Polish: {{t+|pl|kwakać}}
 * Portuguese: {{t+|pt|grasnar}}, {{t|pt|grasnir}}, {{t|pt|grassitar}}, {{t|pt|gracitar}}
 * Romanian: {{t+|ro|măcăi}}
