--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -360,7 +360,6 @@ From {{inh|en|enm|mille}}, {{m|enm|milne}}, from {{inh|en|ang|mylen}}, from {{in
 #: ''This maize '''mills''' well.''
 # {{lb|en|intransitive|slang}} To take part in a [[fistfight]]; to [[box]].
 # {{lb|en|transitive|mining}} To fill (a [[winze]] or interior incline) with broken [[ore]], to be drawn out at the bottom.
-# {{lb|en|trading card games}} To place cards into the discard pile directly from the draw pile.
 # {{lb|en|obsolete|UK|thieves' cant}} To commit [[burglary]].
 #* {{quote-book
 |year=1611
@@ -487,6 +486,37 @@ Ultimately from {{etyl|la|en}} {{m|la|millesimum}}.
 {{en-noun}}
 
 # A [[line]] of [[three]] matching [[piece]]s in [[nine men's morris]] and related games.
+
+===Etymology 4===
+{{back-formation|en|Millstone|nodot=1}}, a ''{{w|Magic: The Gathering}}'' card with this effect (first printed 1994).
+
+====Alternative forms====
+* {{alter|en|Mill||in the sense of "a strategy"}}
+
+====Verb====
+{{en-verb}}
+
+# {{lb|en|transitive|trading card games}} To move (a card) from a deck to the discard pile.
+# {{lb|en|transitive|Hearthstone}} To destroy (a card) due to having a full hand.
+#* {{quote-journal|author=Ozzie Mejia|date=October 9, 2018|title=Hearthstone: 4 decks to watch during the 2018 HCT Fall Championship|journal=Shacknews|url=https://www.shacknews.com/article/107773/hearthstone-4-decks-to-watch-during-the-2018-hct-fall-championship|passage=what happens when a Quest Rogue uses Vanish and Malygos gets '''milled'''?|lang=en}}
+
+=====Synonyms=====
+* {{sense|Hearthstone}} {{l|en|burn}}
+
+=====Derived terms=====
+* {{l|en|self-mill}}
+
+====Noun====
+{{en-noun|~}}
+
+# {{lb|en|trading card games}} Discarding a card from one's deck.
+#* {{quote-journal|author=Jay Castello|date=14th October 2018|title=Pro Hearthstone player burns key card with perfect comedic timing|journal=Rock Paper Shotgun|url=https://www.rockpapershotgun.com/2018/10/14/pro-hearthstone-player-burns-key-card-with-perfect-comedic-timing/|passage=he’s had some fairly infamous '''mills''' in other events. Back in 2017’s Spring Championships, he burned the crucial Archmage Antonidas|lang=en}}
+# {{lb|en|trading card games}} A strategy centered on depleting the opponent's deck.
+#* {{quote-journal|author=Wavelength|date= Jun 16, 2018 |title=Efficient Off-Meta Decks Spotlight|journal=Fade2Karma|url=https://f2k.gg/articles/1956_efficient-off-meta-decks-spotlight|passage=Kingsane Rogue will forever have a negative connotation attached to it because it began as a '''mill''' deck, and '''mill''' is one of the most tilt-inducing strategies in fantasy card games.|lang=en}}
+#* {{quote-journal|author=Collin MacGregor|date=Sep 24, 2018|title=Top 10 Guilds of Ravnica Commander Cards in Magic The Gathering|journal=heavy.|url=https://heavy.com/games/2018/09/guilds-of-ravnica-commander-mtg/|passage=Great for '''mill''', control, or even Voltron decks, Mnemonic Betrayal is a fantastic addition regardless of your strategy.|lang=en}}
+
+=====Derived terms=====
+* {{l|en|Mill Rogue}}
 
 ===References===
 * {{R:Century 1911}}
