--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -518,6 +518,13 @@ Ultimately from {{etyl|la|en}} {{m|la|millesimum}}.
 =====Derived terms=====
 * {{l|en|Mill Rogue}}
 
+=====Translations=====
+{{trans-top|discarding}}
+{{trans-bottom}}
+{{trans-top|strategy}}
+* Japanese: {{t|ja|ミル|tr=miru}}
+{{trans-bottom}}
+
 ===References===
 * {{R:Century 1911}}
 * {{R:Webster 1913}}
