Reverted edits by [[Special:Contributions/Hitherelucky|Hitherelucky]]. If you think this rollback is in error, please leave a message on my [[User talk:Surjection|talk page]]. <ulterior motive#50531647>

--- a/en/u/ulterior motive.802595.wikitext
+++ b/en/u/ulterior motive.802595.wikitext
@@ -3,7 +3,7 @@
 ===Noun===
 {{en-noun}}
 
-Someone wanna be fucking wit you if ya search dis up. Drop their ass as quick as you can.# An [[alternative]] or [[extrinsic]] [[reason]] for doing something, especially when concealed or when differing from the [[stated]] or [[apparent]] reason.
+# An [[alternative]] or [[extrinsic]] [[reason]] for doing something, especially when concealed or when differing from the [[stated]] or [[apparent]] reason.
 #* {{quote-text|year=1895|author=[[w:Arthur_Conan_Doyle|Sir Arthur Conan Doyle]]|title=The Stark Munro Letters|chapter=9|passage=There lurks no bribe in the smell and beauty of the flower. Its charm has no '''ulterior motive'''.}}
 #* '''1941''', "[http://www.time.com/time/magazine/article/0,9171,849702,00.html Poetry]," ''Time'', 8 Dec.,
 #*: The poet is a man without a profit or any other kind of '''ulterior motive'''.
