--- a/en/c/cop.26062.wikitext
+++ b/en/c/cop.26062.wikitext
@@ -31,7 +31,9 @@ Uncertain. Perhaps from {{inh|en|ang|copian||to plunder; pillage; steal}}; or po
 # {{lb|en|transitive}} to [[steal]].
 # {{lb|en|transitive}} to [[adopt]].
 #: ''No need to '''cop''' an attitude with me, junior.''
-# {{lb|en|intransitive|usually with "to"|slang}} to [[admit]], especially to a crime.
+# {{lb|en|transitive}} {{rfdef|en}}
+#* {{quote-song|year=1992|lyricist={{w|Roxanne Shanté}}|title=Straight Razor|album=The Bitch Is Back|passage=You bust in the house, another bitch’s mouth is suckin on your man's dick<br/>What do you do: think straight? Or do you run to the back,<br/>Open the trunk to the nickel-plate 38?<br/>“Wait wait, baby, please!”<br/>That's the shit he's '''coppin''' when he’s down on both his knees}}
+# {{lb|en|intransitive|usually with “to”|slang}} to [[admit]], especially to a crime.
 #: ''I already '''copped''' to the murder. What else do you want from me?''
 #: ''Harold '''copped''' to being known as "Dirty Harry".''
 #* {{quote-book|title=Mr. Paradise|page=295|author=Elmore Leonard|year=2005|passage=He shot a guy in a bar on Martin Luther King Day and '''copped''' to first-degree manslaughter}}
