/* Adjective */ re football: "inaccurate at shooting" suggests we would say "bent striker"/"bent player" rather than "bent shot" <bent#50546031>

--- a/en/b/bent.6793.wikitext
+++ b/en/b/bent.6793.wikitext
@@ -31,7 +31,7 @@ From {{m|en|bend}}.
 |page=
 |passage={{...}}in the ape posse, '''bent''' on vengeance, traversing landscapes clothed in snow and bristling with California red fir and silver pine, spooking human stragglers, and running across fresh graves as they search for the nameless colonel and try to piece together why the humans are killing each other. }}
 # (Of a person) leading a life of [[crime]].
-# {{lb|en|slang|football}} [[inaccurate]] at [[shooting]]
+# {{lb|en|slang|football}} [[inaccurate]]ly [[aim]]ed
 #: ''That shot was so '''bent''' it left the pitch.''
 # {{lb|en|colloquial|chiefly|US}} Suffering from [[the bends]]
 # {{lb|en|slang}} [[high|High]] from both [[marijuana]] and [[alcohol]].
