--- a/en/m/marmot.8229.wikitext
+++ b/en/m/marmot.8229.wikitext
@@ -6,7 +6,7 @@
 From {{bor|en|frm|marmote}}, from {{der|en|fro|marmotaine}}, {{m|fro|marmontaine}}, {{m|en|murmontain}}, from Old {{der|en|frp|marmotan}}, from {{der|en|VL.|*mures montani}}, from {{der|en|la|mus}} {{m|la|monti||mountain rat}}, from {{w|Classical Latin|Classical}} {{der|en|la|mus alpini}}; akin to {{w|Engadin}} {{cog|rm|murmont}}, {{cog|goh|muremunto}} (dialectal {{cog|de|Murmentel}}, standard {{m|de|Murmeltier}}).
 
 ===Pronunciation===
-* {{IPA|/ˈmɑɹmət/|lang=en}}
+* {{IPA|/ˈmɑɹ.mət/|lang=en}}
 * {{hyphenation|mar|mot|lang=en}}
 
 ===Noun===
