t+uk:[[дивізія]] t+be:[[дывізія]] ([[WT:EDIT|Assisted]]) <division#50562212>

--- a/en/d/division.26256.wikitext
+++ b/en/d/division.26256.wikitext
@@ -238,6 +238,7 @@ From {{inh|en|enm|divisioun}}, from {{der|en|fro|division}}, from {{der|en|la|di
 {{trans-top|large military unit}}
 * Afrikaans: {{t+|af|afdeling}}, {{t|af|skeiding}}
 * Armenian: {{l|hy|դիվիզիա}}
+* Belarusian: {{t|be|дыві́зія|f}}
 * Bulgarian: {{t|bg|дивизия|f}}
 * Catalan: {{t+|ca|divisió|f}}
 * Czech: {{t|cs|divize|f}}
@@ -275,6 +276,7 @@ From {{inh|en|enm|divisioun}}, from {{der|en|fro|division}}, from {{der|en|la|di
 * Swedish: {{t+|sv|division|c}}
 * Telugu: {{t+|te|విభాగము|sc=Telu}}
 * Turkish: {{t+|tr|tümen}}
+* Ukrainian: {{t|uk|диві́зія|f}}
 * West Frisian: {{t|fy|divyzje|c}}
 {{trans-bottom}}
 
