--- a/en/b/BFD.746587.wikitext
+++ b/en/b/BFD.746587.wikitext
@@ -3,7 +3,7 @@
 ===Interjection===
 {{en-interj}}
 
-# {{lb|en|especially|humorous|vulgar}} A [[big deal]]: {{initialism of|[[big]] [[fucking]] [[deal]]|lang=en}}
+# {{lb|en|especially|humorous|vulgar}} {{initialism of|[[big deal|big fucking deal]]|lang=en}}
 
 ===Anagrams===
 * {{anagrams|en|Bdf.}}
