--- a/en/d/division.26256.wikitext
+++ b/en/d/division.26256.wikitext
@@ -238,10 +238,13 @@ From {{inh|en|enm|divisioun}}, from {{der|en|fro|division}}, from {{der|en|la|di
 
 {{trans-top|large military unit}}
 * Afrikaans: {{t+|af|afdeling}}, {{t|af|skeiding}}
+* Arabic: {{t|ar|فِرْقَة|f}}
 * Armenian: {{l|hy|դիվիզիա}}
 * Belarusian: {{t|be|дыві́зія|f}}
 * Bulgarian: {{t|bg|дивизия|f}}
 * Catalan: {{t+|ca|divisió|f}}
+* Chinese:
+*: Mandarin: {{t+|cmn|師團}}, {{t+|cmn|师团|tr=shītuán}}
 * Czech: {{t|cs|divize|f}}
 * Dutch: {{t+|nl|divisie|f}}
 * Esperanto: {{t|eo|divizio}}
@@ -256,9 +259,10 @@ From {{inh|en|enm|divisioun}}, from {{der|en|fro|division}}, from {{der|en|la|di
 * Hebrew: {{t|he|אוגדה|f|tr=ugdá|sc=Hebr}}
 * Icelandic: {{t+|is|herdeild|f}}, {{t+|is|deild|f}}
 * Indonesian: {{t+|id|divisi}}
+* Japanese: {{t+|ja|師団|tr=しだん, shidan}}
 * Khmer: {{t|km|កងពលធំ|tr=kong pol thom|sc=Khmr}}
-* Korean: {{t+|ko|사단}}
 {{trans-mid}}
+* Korean: {{t+|ko|사단}}
 * Kurdish:
 *: Sorani: {{t|ckb|فرقە|tr=firqe}}
 * Macedonian: {{t|mk|дивизија|f|tr=divízija|sc=Cyrl}}
@@ -278,6 +282,7 @@ From {{inh|en|enm|divisioun}}, from {{der|en|fro|division}}, from {{der|en|la|di
 * Telugu: {{t+|te|విభాగము|sc=Telu}}
 * Turkish: {{t+|tr|tümen}}
 * Ukrainian: {{t|uk|диві́зія|f}}
+* Vietnamese: {{t+|vi|sư đoàn}}, {{t+|vi|sư}}
 * West Frisian: {{t|fy|divyzje|c}}
 {{trans-bottom}}
 
