t+cmn:[[師]] t+cmn:[[师]] ([[WT:EDIT|Assisted]]) <division#50568221>

--- a/en/d/division.26256.wikitext
+++ b/en/d/division.26256.wikitext
@@ -244,7 +244,7 @@ From {{inh|en|enm|divisioun}}, from {{der|en|fro|division}}, from {{der|en|la|di
 * Bulgarian: {{t|bg|дивизия|f}}
 * Catalan: {{t+|ca|divisió|f}}
 * Chinese:
-*: Mandarin: {{t+|cmn|師團}}, {{t+|cmn|师团|tr=shītuán}}
+*: Mandarin: {{t+|cmn|師團}}, {{t+|cmn|师团|tr=shītuán}}, {{t+|cmn|師}}, {{t+|cmn|师|tr=shī}}
 * Czech: {{t|cs|divize|f}}
 * Dutch: {{t+|nl|divisie|f}}
 * Esperanto: {{t|eo|divizio}}
